Refactor y acomodando cosas | DB

--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -1,5 +1,4 @@
 La estructura básica de una expresión SQL consiste en tres cláusulas: `SELECT`, `FROM` y `WHERE`, de la forma:
-
 ```sql
 SELECT A1, A2, ... , An
 	FROM R1, R2, ... ,Rm
@@ -7,7 +6,6 @@ SELECT A1, A2, ... , An
 ```
 
 Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ representa cada una de las relaciones y $P$ es un predicado que se aplica a la consulta.
-
 >[!caution] Sintaxis de las Consultas SQL
 >Existe un estándar que especifica todas las operaciones SQL y como es su sintaxis, pero cada implementador toma la decisión final de como será la sintaxis de su lenguaje de consulta, por lo que pueden existir una serie de diferencias en las consultas entre bases de datos y otra, aunque estas suelen ser mínimas. Además puede que algunos implementadores decidan añadir cláusulas adicionales que faciliten algunas tareas en particular.
 
@@ -19,7 +17,6 @@ Donde cada $A_i$ representa un atributo de una relación o tabla, $R_i$ represen
 	- En esta cláusula se utilizan conectores lógicos como `and`, `or` y `not`.
 	- Permite usar operadores de comparación como >, <, =, entre otros. SQL permite utilizar estos operadores con distintos tipos de datos como cadenas de textos o incluso fechas.
 	- En esta cláusula se puede utilizar el operador especial `BETWEEN` para especificar intervalos de valores válidos. Este operador incluye ambos valores extremos del intervalo de valores especificados. Un ejemplo del uso de este operador es el siguiente:
-
 ```sql
 SELECT num_prestamo
 	FROM prestamo
@@ -28,7 +25,6 @@ SELECT num_prestamo
 
 - **FROM**: Lista las relaciones involucradas en la consulta. Define un producto cartesiano de las relaciones listadas.
 	- Si en esta cláusula se colocan dos tablas que posean un atributo con el mismo nombre y se desea mostrar este en el resultado de la consulta, se debe especificar la tabla de la cual se utilizará el valor, de lo contrario ocurrirá un error, por ejemplo:
-
 ```sql
 SELECT nombre_cliente, prestatario.numero_prestamo, importe
 	FROM prestatario, prestamo
@@ -37,9 +33,9 @@ SELECT nombre_cliente, prestatario.numero_prestamo, importe
 
 - **ORDER BY**: Hace que las tuplas resultantes de una consulta se presenten en un cierto orden.
 	- Se puede incluir la cláusula `DESC` para ordenar los elementos de manera descendente y `ASC` para ordenarlos de manera ascendente. Ejemplo:
-
 ```sql
--- Todos los clientes que tengan un prestamo en la sucursal de Nevacerrada
+-- Todos los clientes que tengan un prestamo en la
+-- sucursal de Nevacerrada
 SELECT DISTINCT C.nombre_cliente
 	FROM prestatario C, prestamo P
 	WHERE C.num_prestamo = P.num_prestamo AND C.nombre_sucursal = 'Navacerrada'
@@ -64,7 +60,6 @@ SELECT DISTINCT C.nombre_cliente
 - **Función de Agregación**: Las funciones de agregación son funciones que toman una colección de valores como entrada y producen un único valor como salida. SQL cuenta con 5 funciones de agregación primitivas, `AVG`, `MIN`, `MAX`, `SUM` y `COUNT`.
 	- La cláusula `GROUP BY` te permite agrupar los resultados de las funciones de agregación de acuerdo a los atributos especificados. Cuando se utiliza esta cláusula, el `SELECT` solo puede contener los atributos que aparecen en el `GROUP BY` o atributos calculados a partir de otros atributos.
 	- La cláusula `HAVING` te permite especificar predicados que deben ser evaluados luego de realizar el agrupamiento, ya que la cláusula `WHERE` siempre se aplica antes de realizar los agrupamientos, véase el ejemplo:
-
 ```sql
 -- Lista a todas las sucursales cuyo saldo medio sea mayor a 1200 dolares
 SELECT nombre_sucursal, AVG(saldo)
@@ -72,11 +67,8 @@ SELECT nombre_sucursal, AVG(saldo)
 	GROUP BY nombre_sucursal
 	HAVING AVG(saldo) > 1200
 ```
-
 ### Valores Nulos
-
 SQL permite el uso de valores ***null*** para indicar la ausencia de información sobre el valor de un atributo. En un predicado se puede usar `IS NULL` para comprobar si un valor es nulo. Cualquier comparación que implique un valor nulo, SQL lo trata como desconocido o ***unknown***, es importante tener esto en cuenta debido a que estos valores puede repercutir en las operaciones que se realicen en las consultas.
-
 >[!tldr] Valores Desconocidos y Operadores Lógicos
 >Para cada uno de los operadores lógicos, los valores desconocidos pueden alterar el resultado de acuerdo a la operación realizada:
 >- **OR**:
@@ -93,18 +85,8 @@ SQL permite el uso de valores ***null*** para indicar la ausencia de informació
 >El predicado de una cláusula `WHERE` se trata como falso, si la evaluación es ***unknown***.
 
 Casi todas las funciones de agregación ignoran los valores nulos a la hora de realizar sus cálculos, a excepción de la función `COUNT`. La única forma en la que estas funciones arrojarían un valor nulo es si no exista ningún valor para dicho atributo en todas las tuplas de la tabla.
-
 ### Subconsultas Anidadas
-
-SQL provee un mecanismo para anidar subconsultas. Una subconsulta es una expresión ***select-from-where*** que se anida dentro de otra consulta. Un uso común de subconsultas es llevar a cabo comprobaciones sobre pertenencia a conjuntos, comparación de conjuntos o comparación de valores con un conjunto. Véase algunos ejemplos de su uso común.
-
-```sql
--- Todos los clientes que tengan una cuenta y un pŕestamo en el banco
-SELECT DISTINCT nombre_cliente
-	FROM prestatario
-	WHERE nombre_cliente IN (SELECT nombre_cliente FROM depositante);
-```
-
+SQL provee un mecanismo para anidar subconsultas. Una subconsulta es una expresión ***select-from-where*** que se anida dentro de otra consulta. Un uso común de subconsultas es llevar a cabo comprobaciones sobre pertenencia a conjuntos, comparación de conjuntos o comparación de valores con un conjunto. 
 >[!important] Operadores de Subconsultas
 >Los operadores de subconsultas son un tipo particular de cláusula que se utiliza generalmente en las comparaciones para ver si el valor cumple con ducha condición para la relación resultante de la subconsulta, estos operadores son los siguientes:
 >- `SOME` / `ANY`: Este operador comprueba si algún valor de la relación resultante de la subconsulta satisface la condición de comparación, si esta se cumple para aunque sea un valor, entonces este operador devuelve verdadero.
@@ -112,24 +94,26 @@ SELECT DISTINCT nombre_cliente
 >- `EXIST`: Verificar si el resultado de una subconsulta contiene al menos una fila, es decir, el resultado no es un conjunto vacío ($r \Leftrightarrow r \neq \varnothing$.). Se utiliza principalmente para condiciones donde necesitas comprobar si un conjunto de datos asociado tiene o no algún resultado.
 >	- Esta cláusula puede ser negada utilizando el operador lógico `NOT`.
 
+A continuación se presentarán una serie de ejemplos de consultas `SQL` que hacen uso de subconsultas y sus diferentes operadores relacionados.
 ```sql
--- Todas las sucursales que tengan un activo mayor a al menos una sucursal de
--- Barcelona
+-- Todas las sucursales que tengan un activo mayor a
+-- al menos una sucursal de Barcelona
 SELECT nombre_sucursal
    FROM sucursal
    WHERE activo > SOME(SELECT activo
 						  FROM sucursal
 						  WHERE ciudad_sucursal = 'Barcelona');
 
--- Todas las sucursales que tengan un activo mayor a todas las sucursales de
--- Barcelona
+-- Todas las sucursales que tengan un activo mayor
+-- a todas las sucursales de Barcelona
 SELECT nombre_sucursal
    FROM sucursal
    WHERE activo > ALL(SELECT activo
 						 FROM sucursal
 						 WHERE ciudad_sucursal = 'Barcelona');
 
--- Clientes que tengan una cuenta en todas las sucursales de Barcelona
+-- Clientes que tengan una cuenta en todas las sucursales
+-- de Barcelona
 SELECT DISTINCT S.nombre_cliente
    FROM depositante S
    WHERE NOT EXISTS (SELECT nombre_sucursal
@@ -142,16 +126,13 @@ SELECT DISTINCT S.nombre_cliente
 							 AND S.nombre_cliente = T.nombre_cliente);
 ```
 
->[!note] Explicación de la Lógica de la Consulta
->La primera subconsulta obtiene todas las sucursales que pertenecen a Barcelona, la segunda subconsulta obtiene las sucursales en la que cada usuario tiene una cuenta. Con el `EXPECT`, lo que lograremos es obtener un conjunto vacío para todos los usuarios que tengan cuentas en todas las sucursales de Barcelona, con `NOT EXISTS` obtenemos un valor verdadero si el resultado de la consulta es vacío, por lo que si el cliente tiene una cuenta en todas las sucursales de Barcelona el conjunto dará vacío, la clausula `NOT EXISTS` será verdadera y el cliente se agregará al resultado de la consulta.
-
+Para la tercera consulta resulta conveniente explicar un par de cosas. En primer lugar, la subconsulta hace una diferencia de conjuntos entre el nombre de todas las sucursales de Barcelona y el nombre de las sucursales en las cuales el cliente tiene una cuenta, cuando el resultado en vacío significa que el cliente tiene una cuenta en todas las sucursales de Barcelona.
+La segunda parte de la consulta utiliza la cláusula `NOT EXISTS`, con la cual obtenemos un valor verdadero si el resultado de la consulta es vacío. Si el resultado de la subconsulta en vacío, entonces el cliente tiene una cuenta en todas las sucursales de Barcelona. Este tipo de consultas permiten reducir el tamaño y la complejidad de las conjuntas.
 #### Relaciones Derivadas
-
-SQL permite el uso de subconsultas en la cláusula `FROM`. En una expresión de este tipo se debe dar un nombre a la relación resultado y se pueden renombrar los atributos. Veamos un ejemplo:
-
+Una relación derivada es una subconsultas en la cláusula `FROM`. En este tipo de expresiones se debe asignar un nombre a la relación resultado, pudiendo renombrar, de forma opcional, los atributos de la consulta resultante. Veamos un ejemplo:
 ```sql
 SELECT nombre_sucursal, res.saldo_medio
-   FROM (SELECT nombre_sucursal, AVG(saldo) as saldo_medio
+   FROM (SELECT nombre_sucursal, AVG(saldo) AS saldo_medio
 		    FROM cuenta
 		    GROUP BY nombre_sucursal) res
    WHERE res.saldo_medio > 1200;
@@ -159,17 +140,14 @@ SELECT nombre_sucursal, res.saldo_medio
 
 En esta formulación no es necesario el uso de la cláusula `HAVING` dado que la relación temporal ***res*** se calcula en la cláusula `FROM`, y los atributos de la nueva relación de nombre ***res*** se pueden usar directamente en la cláusula `WHERE`.
 ### Reunión de Relaciones (JOIN)
-
 Las operaciones de reunión toman como entrada dos relaciones y devuelven como resultado otra relación. Los ***tipos de reunión*** definen cómo se tratan las tuplas de cada relación que no encajan con ninguna tupla de la otra relación y la ***condición de reunión*** indica las tuplas pertenecientes a las dos relaciones que encajan y los atributos que se incluyen en el resultado de la reunión.
 Dentro de los tipos de reuniones encontramos a los siguientes tipos:
-
 - **INNER JOIN**.
 - **LEFT OUTER JOIN**.
 - **RIGHT OUTER JOIN**.
 - **FULL OUTER JOIN**.
 
-En SQL los JOINs se pueden realizar de varias maneras, veamos algunos ejemplos:
-
+En `SQL` las operaciones de `JOIN` se pueden realizar de dos maneras diferentes, veamos algunos ejemplos:
 ```sql
 -- Reunion utilizando la cláusula ON
 prestamo INNER JOIN 
@@ -179,8 +157,7 @@ prestamo INNER JOIN
 prestamo INNER JOIN prestatario USING(num_prestamo)
 ```
 
-La principal diferencia entre la cláusula `ON` y `USING` es que en la primera nosotros podemos especificar la condición de reunión, es decir, que podríamos tener otros operadores para especificar la relación de reunión, en cambio, el `USING` realiza una reunión cuando ambos campos son iguales, con la particularidad de que sí se utilizan variables tuplas en la cláusula `SELECT` el atributo utilizado en el `USING` no debe ser asociado a ninguna de las dos tuplas debido a que se produciría una ambigüedad.
-
->[!note] Reunión Natural
+La principal diferencia entre la cláusula `ON` y `USING` es que en la primera se debe especificar la condición de reunión, es decir, se puede utilizar otros operadores como lo serían $<$, $>$, $<>$, entre otros, para especificar la condición de reunión. En cambio, la cláusula `USING` realiza una reunión cuando ambos campos de las relaciones a reunir son iguales, con la particularidad de que sí se utilizan variables tuplas en la cláusula `SELECT` el atributo utilizado en el `USING` no debe ser asociado a ninguna de las dos tuplas debido a que se produciría una ambigüedad.
+>[!tldr] Reuniones Naturales
 >Las reuniones naturales en SQL se consiguen a través de la cláusula `NATURAL` que se pone antes del tipo de reunión, de esta forma la reunión se efectuará de acuerdo al atributo en común entre las dos relaciones.
 >Por lo general este tipo de reuniones no son convenientes de usar en la realidad, debido a que cuando se reúnen dos tablas de una aridad alta, puede que existan atributos con el mismo nombre de los cuales no se es consciente, lo que provocaría un resultado inesperado a la hora de realizar la consulta.
