--- a/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 4/3. Lenguaje de Definicion de Datos.md
@@ -1,8 +1,6 @@
 ## Lenguaje de Definición de Datos (DDL)
-
 El **Lenguaje de Definición** de SQL permite la especificación de un conjunto de relaciones, además de poder especificar más propiedades para los datos. El lenguaje de definición de datos nos permite especificar el esquema de cada relación, el dominio de valores asociado a cada atributo, las restricciones de integridad, el conjunto de índices que se deben mantener por cada relación, la información de seguridad y autorización para cada relación y la estructura de almacenamiento físico de cada relación en disco.
 SQL en su estándar define una serie de dominios nativos que pueden ser utilizados, entre los cuales encontramos:
-
 - `CHAR(n)`: Es una cadena de caracteres de longitud fija, con una longitud $n$ especificada por el usuario. También se puede utilizar la palabra completa `CHARACTER`, para especificar este tipo.
 - `VARCHAR(n)`: Es una cadena de caracteres de longitud variable, con una longitud máxima $n$ especificada por el usuario. También se puede utilizar la forma completa `CHARACTER VARYING`.
 - `INT`: Es un entero, más bien un subconjunto finito de los enteros, que es dependiente de la máquina. También se puede usar la palabra completa `INTEGER`.
@@ -25,11 +23,8 @@ SQL en su estándar define una serie de dominios nativos que pueden ser utilizad
 >```
 >- Los valores de intervalo se pueden sumar a los tipos `DATE`, `TIME` y `TIMESTAMP`.
 >- Se puede realizar un `CAST` del tipo string a `DATE`, `TIME` y `TIMESTAMP` siempre y cuando se respete el formato de los tipos fecha.
-
 ### Definición de Esquemas
-
 En SQL un esquema relacional se define utilizando la cláusula `CREATE TABLE`, seguido por el nombre de la tabla, para cada tabla especificamos los atributos y el dominio de cada uno de estos atributos, veamos en un ejemplo:
-
 ```sql
 CREATE TABLE cliente(
 	nombre_cliente    CHAR(20),
@@ -52,7 +47,6 @@ CREATE TABLE cliente(
 >Cuando se declara a un campo como clave primaria, el campo se declara automáticamente como `NOT NULL`, ya que así está definido por el estándar.
 
 SQL también te permite borrar tablas y todos los valores que estas contiene, mediante la cláusula `DROP TABLE` seguida del nombre de la tabla. Además, te permite alterar las tablas mediante la cláusula `ALTER TABLE`, esta cláusula te permite agregar nuevos atributos a las tablas, cambiar el tipo de uno o varios atributos e incluso modificar o agregar restricciones de integridad. Veamos algunos ejemplos:
-
 ```sql
 -- Eliminación de un atributo
 ALTER TABLE producto DROP precio_total;
@@ -64,20 +58,17 @@ ALTER TABLE cliente ALTER COLUMN nombre TYPE VARCHAR(100);
 ALTER TABLE distribuidores ADD CONSTRAINT distribuidores_fk
 	FOREIGN KEY (direccion) REFERENCES direcciones (direccion);
 ```
-
 ### Creación y Definición de Índices
-
 Los índices en bases de datos sirven para mejorar la eficiencia y el rendimiento de las consultas y operaciones de búsqueda. La eficiencia de estos índices va a variar, ya que en bases de datos muy grandes estos índices no representarían una mejora, en caso incluso empeora el tiempo de respuesta debido a que se debe ordenar los índices nuevamente. Para crear estos índices se usa las cláusulas `CREATE INDEX`, veamos un ejemplo:
-
 ```sql
 CREATE INDEX idx_sucursal ON sucursal (nombre_sucursal);
 ```
 
 >[!tldr] Claves Candidatas en los Índices
->Si deseamos declarar que la clave de búsqueda es una clave candidata, hay que añadir la cláusula `UNIQUE` a la definición del índice, es decir, si esa clave puede identificar unívocamente cada uno de los elementos de una tabla, el índice debe crearse utilizando el predicado `UNIQUE`. La declaración del índice se realiza de la siguiente manera:
+>Si deseamos declarar que la clave de búsqueda es una clave candidata, hay que añadir la cláusula `UNIQUE` a la definición del índice, es decir, si esa clave puede identificar unívocamente cada uno de los elementos de una tabla, el índice debe crearse utilizando la cláusula `UNIQUE`. La declaración del índice se realiza de la siguiente manera:
 >```sql
 >CREATE UNIQUE INDEX idx_sucursal ON sucursal (id_sucursal);
 >```
 
-Los índices son importantes para el procesamiento eficiente de las transacciones tanto de actualización como de consulta. Cuando se define un atributo o conjunto de atributos como clave primaria, el sistema crea implícitamente un índice sobre esa clave.
+Los índices son importantes para el procesamiento eficiente de las transacciones tanto de actualización como de consulta. Cuando se define un atributo o conjunto de atributos como clave primaria, el sistema genere implícitamente un índice sobre esa clave.
 Aunque la sintaxis que se muestra se usa ampliamente y está soportada en muchos sistemas de bases de datos, no es parte de la norma ANSI /SQL.
