--- a/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
+++ b/4º Año/Bases de Datos/Unidad 5/2. Normalizacion y Formas Normales.md
@@ -1,5 +1,4 @@
 Las metas de la normalización es decidir si un esquema de relación $R$ esta en buena forma. En caso de que esto no sea así se divide el esquema en sub-esquemas de la forma $\{R_1, R_2, ... , R_n\}$ tal que, cada sub-esquema de la relación $R$ este en buena forma y la descomposición sea de join sin perdidas. Cabe aclarar que para que la descomposición sea considerada valida se debe verificar que $R_1 \cup R_2 \cup R_n = R$.
-
 >[!tldr] Propiedad del Join Sin Perdidas
 >Una descomposición de $R$ en $R_1$ y $R_2$ es Join sin perdidas si al menos una de las siguientes dependencias se encuentra en $F^+$:
 >
@@ -9,10 +8,9 @@ Las metas de la normalización es decidir si un esquema de relación $R$ esta en
 >Es decir, $R_1 \cap R_2$ es clave de $R_1$ o es clave de $R_2$.
 
 Al realizar la descomposición de $R$ con un conjunto de dependencias funcionales $F$ en $R_1, R_2, ... , R_n$ se pretende:
-
 1. Una descomposición de Join sin perdidas.
 2. No redundancia. El esquema $R_i$ preferentemente debe estar en forma normal de Boyce-Codd o Tercera forma normal.
-3. Preservar dependencias funcionales. Sea $F_i$ el conjunto de dependencias funcionales de $F^+$ que incluye solo atributos de $R_i$.  Una descomposición de preserve las dependencias funcionales es $(F_1 \cup F_2 \cup \cdots \cup F_n)^+ = F^+$. Otra forma de realizar la verificación de las violaciones de las dependencias funcionales es calcular joins para evaluar si sigue cumpliendo las condiciones antes mencionadas.
+3. Preservar dependencias funcionales. Sea $F_i$ el conjunto de dependencias funcionales de $F^+$ que incluye solo atributos de $R_i$.  Una descomposición que preserve las dependencias funcionales es $(F_1 \cup F_2 \cup \cdots \cup F_n)^+ = F^+$. Otra forma de realizar la verificación de las violaciones de las dependencias funcionales es calcular reuniones de relaciones para posteriormente evaluar si sigue cumpliendo las condiciones antes mencionadas.
 
 >[!tldr] Preservación de Dependencias
 >Para ver si la descomposición de un esquema a preservado las dependencias funcionales de este mismo se puede realizar un testeo, aplicando el siguiente algoritmo:
@@ -21,28 +19,21 @@ Al realizar la descomposición de $R$ con un conjunto de dependencias funcionale
 >
 >Este testeo se aplica sobre todas las dependencias funcionales de $F$ para chequear si una descomposición preserva dependencias o no.
 >Este procedimiento toma un tiempo polinómico para determinar si se violaron o no las dependencias funcionales, mientras que el anterior método mencionado requiere un tiempo exponencial.
-
 ### Primera Forma Normal
-
 Un dominio es atómico si se considera que los elementos del dominio son unidades indivisibles, como número o caracteres. Alguno de los ejemplos más comunes de dominios no atómicos son:
-
 - Conjuntos: Teléfonos de un empleado, titulares de cuentas, cuentas de un cliente, etc.
 - Atributos compuestos.
 - Números de identificación de la forma VNT011 que pueden ser descompuestos en dos partes, una numérica y otra alfanumérica.
 
 Se dice que el esquema de una relación $R$ está en la primera forma normal si los dominios de todos los atributos de $R$ son atómicos.
-
 ### Forma Normal de Boyce-Codd
-
 Un esquema $R$ se encuentra en la forma normal de Boyce-Codd con respecto a un conjunto $F$ de dependencias funcionales, si para toda las dependencias funcionales en $F^+$ de la forma $X \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple al menos uno de los siguientes casos:
-
 1. $X \rightarrow Y$ es trivial.
-2. $X$ es una super clave para $R$.
+2. $X$ es una superclave para $R$.
 
-Para verificar si una dependencia funcional no trivial $X \rightarrow Y$ causa alguna violación dela forma normal de Boyce-Codd, primero se debe calcular $X^+$ y asegurarse que estén incluidos todos los atributos en $R$, esto nos asegura que $X$ es una super clave de $R$.
-Este test se puede simplificar, ya que solo basta con chequear aquellas dependencias funcionales de $F$ para las cuales surge una violación de la forma normal,  en caso de que ninguna de las dependencias funcionales cause una violación a la forma normal de Boyce-Codd, entonces ninguna dependencia funcional en $F^+$ causará una violación a esta forma normal.
+Para verificar si una dependencia funcional no trivial $X \rightarrow Y$ causa alguna violación dela forma normal de Boyce-Codd, primero se debe calcular $X^+$ y asegurarse que estén incluidos todos los atributos en $R$, esto nos asegura que $X$ es una superclave de $R$.
+Este test se puede simplificar, ya que solo basta con chequear aquellas dependencias funcionales de $F$ para las cuales surge una violación de la forma normal, en caso de que ninguna de las dependencias funcionales cause una violación a la forma normal de Boyce-Codd, entonces ninguna dependencia funcional en $F^+$ causará una violación a esta forma normal.
 No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relación en una descomposición de $R$. Por ejemplo dado $R(A, B, C, D)$ con $F = \{ A \rightarrow B, B \rightarrow C\}$, se descompone $R$ en $R_1(A, B)$ y $R_2(A, C, D)$, en este caso ninguna de las dependencias funcionales de $F$ causa una violación a las dependencias y los esquemas parecerías conservar la forma normal de Bayce-Codd, pero si tomamos $F^+$ veremos que se puede inferir $A \rightarrow C$, por lo que $R_2$ violaría las la forma normal de Bayce-Codd y tendría que ser dividida.
-
 >[!tldr] Determinación de Claves Candidatas
 >El método para encontrar todas las claves candidatas de una relación, es mediante el cumplimiento de las siguientes condiciones.
 >
@@ -56,38 +47,31 @@ No obstante, usar solo el conjunto $F$ es incorrecto cuando se testea una relaci
 >Todos aquellos atributos que no encajen en ninguna de estas áreas, puede que tal vez sean claves candidatas
 
 El algoritmo para transformar un esquema $R$ es un esquema en forma normal de Boyce-Codd consta de los siguientes pasos:
-
 1. Se calcula $F^+$ para el conjunto de dependencias funcionales $F$.
 2. Para cada dependencia funcional de la forma $X \rightarrow Y$ no trivial, se crea un nuevo esquema $R_i(X, Y)$. Nuestro esquema original está compuesto de la siguiente manera $R = R-R_i \cup R_i -Y$.
 3. El nuevo esquema $R_i$ ya está en forma normal de Boyce-Codd, por lo que se tiene que seguir verificando si no existen más dependencias funcionales que violan las restricciones.
 4. El proceso de descomposición se repite hasta que ya no se encuentran más dependencias funcionales no triviales.
 
 Para chequear si un esquema $R_i$ en una descomposición de $R$ está en forma normal de Boyce-Codd, se puede hacer de dos maneras:
-
 1. Se puede testear $R_i$ para la forma normal de Boyce-Codd con respecto a la restricción de $F$ a $R_i$, es decir, evaluar si se cumplen todas las dependencias funcionales de $F^+$ que contengan atributos de $R_i$.
 2. Se puede usar el conjunto $F$ original de dependencias funcionales sobre $R$ y testear lo siguiente:
 	- Para cada conjunto de atributos $X \subseteq R_i$, calcular $X^+$ y verificar que esta clausura incluya todos los atributos de $R_i$ o que no incluya ningún atributo de $R_i - X$. Si la condición es violada por algún $X \rightarrow Y$ en el conjunto $F$, la dependencia funcional $X \rightarrow (X^+ -X) \cap R_i$ se mantiene en $R_i$, y $R_i$ viola la forma normal de Bayce-Codd. Por lo que se debe usar las dependencias funcionales anteriores para descomponer $R_i$.
 
 No siempre se podrá obtener una descomposición en la forma normal de Bayce-Codd que preserve todas las dependencias. Por ejemplo, consideremos que tenemos un $R = (A, B, C)$ y un conjunto de dependencias funcionales $F = \{AB \rightarrow C, C \rightarrow B\}$, basándonos en esas dependencias funcionales y aplicando algunos axiomas de Armstrong, obtenemos que $R$ tiene dos claves candidatas $AB$ y $AC$, por lo tanto, $R$ no está en forma normal de Boyce-Codd. El inconveniente en este caso surge en que independientemente de como descompongamos $R$ nunca se preservará la dependencia funcional $AB \rightarrow C$.
-
 ### Tercera Forma Normal
-
 Existen situaciones en donde la forma normal de Boyce-Codd no preserva todas las dependencias y se requiere realizar un chequeo eficiente para corroborar que no se realizó ninguna violación de las dependencias funcionales en alguna actualización.
 La solución a estos problemas es utilizar una forma normal más débil, es decir, menos restrictiva llamada tercera forma normal. Esta forma normal permite algunas redundancias, pero las dependencias funcionales se pueden chequear sobre relaciones individuales. Además, siempre va a existir una descomposición en tercera forma normal que cumpla con las propiedades de join sin perdidas y preservación de dependencias.
 Un esquema $R$ está en tercera forma normal si para todo $X \rightarrow Y \in F^+$ se cumple al menos una de las siguientes condiciones:
-
 - $X \rightarrow Y$ es trivial.
 - $X$ es una superclave para $R$.
 - Cada atributo $A$ en $Y - X$ está contenido en alguna clave candidata de $R$. Cada atributo puede estar en diferentes claves primarias.
 
 Cabe aclarar que si una relación está en una forma normal de Boyce-Codd está también en tercera forma normal. Además, la tercera condición es una relajación de la forma normal de Boyce-Codd para asegurar la preservación de dependencias.
-
 >[!example] Ejemplo de Tercera Forma Normal
 >Retomando el mismo ejemplo anterior donde tenemos un esquema $R = (A, B, C)$ y el conjunto $F = \{AB \rightarrow C, C \rightarrow B\}$ de dependencias funcionales, teniendo como claves candidatas $AB$ y $AC$, en este casi la relación cumple con la tercera forma normal, ya que $AB$ es una superclave y $B$ forma parte de una clave candidata.
 >Aunque la relación cumple con la tercera forma normal, todavía puede haber alguna redundancia. Por ejemplo, el valor de $B$ puede determinarse tanto directamente a través de $C$ como combinando $A$ y $B$. Esto podría llevar a inconsistencias si no se manejan adecuadamente las actualizaciones. Para evitar esto se puede descomponer $R$ en $R_1 = (A, C)$ y $R_2 = (C, B)$ siguiendo la forma normal de Boyce-Codd, para verificar que la relación original $AB \rightarrow C$ se cumpla para esta descomposición necesitaremos realizar un `JOIN` entre ambos esquemas.
 
 La ventaja que te brinda la tercera forma normal es que solo se necesita chequear la dependencias funcionales en $F$, evitando así tener que calcular $F^+$ y verificar todas las dependencias. Para realizar este chequeo podemos utilizar las clausuras de atributos en cada dependencia funcional $X \rightarrow Y$, si $X$ es una super clave. Si $X$ no resulta ser una super clave, debemos verificar que cada atributo en $Y$ forme parte de alguna super clave. Este test es bastante costoso dado que involucra la búsqueda de claves candidatas. Existe un algoritmo que se puede utilizar para calcular la tercera forma normal, el cual consta de los siguientes pasos:
-
 1. Encontrar todas las claves candidatas posibles de acuerdo al conjunto de dependencias funcionales $F$.
 2. Calcular la cobertura canónica $F_C$ para el conjunto de dependencias funcionales $F$, en caso de que esta no sea ya una cobertura canónica.
 3. Para cada par de dependencias funcionales de la forma $X \rightarrow Y$ se creará una nueva relación $R_i(XY)$, es decir, se creara una nueva relación que contenga todos los atributos tanto del lado derecho como del lado izquierdo. En caso de que $XY$ ya formen parte de un conjunto no se deberá crear una nueva relación.
@@ -101,9 +85,7 @@ La ventaja que te brinda la tercera forma normal es que solo se necesita chequea
 >	2. Tienen la necesidad de utilizar valores nulos para representar relaciones donde un valor no fue dado. véase el Ejemplo
 >
 >![[3NF-BCNF.png]]
-
 ## Dependencias Multivaluadas
-
 Sea $R$ un esquema, donde $X \subseteq R$ y $Y \subseteq R$. La dependencia multivaluada $X \rightarrow \rightarrow Y$ se cumple para $R$ si para cualquier relación legal $r(R)$, para todos los pares de tuplas $t_1, \ t_2 \in r$ tal $t_1[X] = t_2[X]$ entonces deberá existir un par de tuplas $t_3, \ t_4 \in r$ tal que:
 
 - $t_1[X] = t_2[X] = t_3[X] = t_4[X]$
@@ -111,7 +93,6 @@ Sea $R$ un esquema, donde $X \subseteq R$ y $Y \subseteq R$. La dependencia mult
 - $t_3[Z] = t_2[Z] \land t_4[Z] = t_1[Z]$
 
 donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un valor específico en $X$ pueden aparecer con cualquier combinación de valores en $Z$.
-
 >[!tldr] Join sin Perdida para Dependencias Multivaluadas
 >Dado un esquema de relación $R$, siendo $R_1$ y $R_2$ una descomposición de $R$. Sea $G$ un conjunto de dependencias. La descomposición de $R_1$ y $R_2$ tiene join sin perdidas si se cumple al menos una de las siguientes condiciones:
 >
@@ -119,29 +100,20 @@ donde $Z =  R -X -Y$. Esto significa que los valores en $Y$ asociados con un val
 >2. $R_1 \cap R_2 \rightarrow \rightarrow R_2 - R_1$
 >
 >Esto significa que los atributos en la intersección $R_1 \cap R_2$​ deben determinar los atributos que están en $R_1$​ pero no en $R_2$ y viceversa​.
-
 ### Cuarta Forma Normal
-
 Un esquema de relación $R$ está en cuarta forma normal con respecto aun conjunto $G$ de dependencias funcionales y dependencias multivaluadas, si para todas las dependencias multivaluadas de $G^+$ de la forma $X \rightarrow \rightarrow Y$, donde $X \subseteq R$ y $Y \subseteq R$, se cumple algunas de las siguientes condiciones:
-
 1. $X \rightarrow \rightarrow Y$ es trivial, es decir, $Y \subseteq X$ o $X \cup Y = R$.
 2. $X$ es una super clave de $R$.
 
 Un esquema de relación esta en cuarta forma normal, si todas las dependencias no triviales es de la forma llave determina atributo. Si el esquema de relación esta en cuarta forma normal también esta en forma normal de Boyce-Codd.
 Existe un algoritmo que te permite realizar las descomposiciones de los esquemas siguiendo la cuarta forma normal, el algoritmo es el siguiente:
-
 ![[algoritmo-4NF.png]]
-
 ### Quinta Forma Normal
-
 Una tabla se dice que está en quinta forma normal si y solo si está en cuarta forma normal y cada dependencia de reunión (join) en ella es implicada por las claves candidatas.
 La quinta forma normal implica situaciones en donde una relación de tres vias debe ser reemplazada con tres relaciones binarias, y no con dos como sucede con el caso de cuarta forma normal.
-
 ## Metas de Diseño Relacional
-
-Las metas del diseño para una base de datos relacionales son conseguir la forma normal de boyce-Codd, los joins sin perdidas y la preservación de dependencias.
+Las metas del diseño para una base de datos relacionales son conseguir la forma normal de Boyce-Codd, los joins sin perdidas y la preservación de dependencias.
 Si no se puede alcanzar eso, se debe elegir entre carecer de las preservación de dependencias y tener problemas de redundancias debido al uso de la tercera forma normal. SQL no provee una forma directa de especificar dependencias funcionales que no sean las super claves, se puede especificar dependencias funcionales usando aserciones, pero son muy costosas para testear. Aun así tenemos una descomposición que preserva las dependencias funcionales, y usando SQL no sería posible testear de manera eficiente una dependencia funcional cuyo lado izquierdo no sea una clave.
-
 >[!tldr] Testeo de Dependencia Funcionales entre Relaciones
 >Si una descomposición no preserva dependencias, podemos tener una vista materializada para cada $X \rightarrow Y \in F_C$ que no está preservada en la descomposición. La vista materializada se define como una proyección en $XY$ del `JOIN` de las relaciones en la descomposición.
 >La dependencia funcional $X \rightarrow Y$ se expresa declarando $X$ como clave candidata en la vista materializada, realizar el chequeo por clave candidata es menos costoso que chequear cada dependencia funcional. Este método tiene el inconveniente de que desperdicia espacio, ya que se tiene que almacenar la vista materializada, provoca una sobrecarga de tiempo debido a que el gestor de la base de datos se encarga de mantener actualizada la vista materializada; además existen sistemas de bases de datos que no permiten realizar declaraciones de claves en las vistas materializadas.
