--- a/4º Año/Bases de Datos/Unidad 7/1. Bases de Datos Orientadas a Objetos.md
+++ b/4º Año/Bases de Datos/Unidad 7/1. Bases de Datos Orientadas a Objetos.md
@@ -1,32 +1,22 @@
 Las aplicaciones tradicionales de las bases de datos consisten en tareas de procesamiento de datos, como la gestión bancaria y de nóminas, con tipos de datos relativamente sencillos, que se adaptan bien al modelo relacional. A medida que los sistemas de bases de datos se fueron aplicando a un rango más amplio de aplicaciones, las limitaciones impuestas por el modelo relacional se convirtieron en un obstáculo. La solución fue la introducción de bases de datos basadas en objetos, que permiten trabajar con tipos de datos complejos.
 El ***modelo de datos relacional orientado a objetos*** extiende el modelo de datos relacional ofreciendo un sistema de tipos más rico que incluye tipos de datos complejos y orientación a objetos. Teniendo a su vez que extender los lenguajes de consultas para permitir que estos trabajen con datos mucho más complejos.
-
->[!tldr] Lenguajes de Programación Persistentes
->Al operar bases de datos orientadas a objetos puede que el acceso a los datos se dificulte debido a la diferencia entre el sistema de tipos de la base de datos y la empleada por los lenguajes de programación, esto dificulta el almacenamiento y recuperación de los datos. Muchas veces tener que expresar el acceso a estos datos a través de un lenguaje intermedio como SQL dificulta el trabajo del programador. Es deseable contar con estructuras o expresiones del lenguaje de programación que permitan el acceso directo a la base de datos.
->En este contexto, el término ***lenguajes de programación persistentes*** hace referencia a las extensiones de los lenguajes de programación existentes que añaden persistencia y otras características de las bases de datos usando el sistema de tipos nativo del lenguaje de programación. Mientras que el término ***sistemas de bases de datos orientadas a objetos*** se usa para hacer referencia a los sistemas de bases de datos que soportan los sistemas de tipos orientados a objetos y permiten el acceso directo a los datos desde los lenguajes de programación orientados a objetos usando el sistema de tipos nativo del lenguaje.
-
-En general cada objeto esta asociado con:
-
+Al operar bases de datos orientadas a objetos puede que el acceso a los datos se dificulte debido a la diferencia entre el sistema de tipos de la base de datos y la empleada por los lenguajes de programación anfitrión, esto dificulta el almacenamiento y recuperación de los datos. Además, el tener que expresar el acceso a estos datos a través de un lenguaje intermedio como SQL dificulta el trabajo del programador, por esta razón es deseable contar con estructuras o expresiones del lenguaje de programación que permitan el acceso directo a la base de datos.
+El término ***lenguajes de programación persistentes*** hace referencia a las extensiones de los lenguajes de programación existentes que añaden persistencia y otras características de las bases de datos usando el sistema de tipos nativo del lenguaje de programación. Mientras que el término ***sistemas de bases de datos orientadas a objetos*** se usa para hacer referencia a los sistemas de bases de datos que soportan los sistemas de tipos orientados a objetos y permiten el acceso directo a los datos desde los lenguajes de programación orientados a objetos usando el sistema de tipos nativo del lenguaje.
+En términos generales, cada objeto está asociado con:
 - Un conjunto de *propiedades* que contiene los datos del objeto.
 - Un conjunto de *mensajes* a los que responde.
 - Un conjunto de *métodos*, los cuales implementan el código de los mensajes.
-
 ## Clases de Objetos
-
 El concepto de clases es similar a la de ***tipos de abstractos de datos (TDA)*** utilizado en la orientación a objetos. Teniendo varios aspectos adicionales, ya que cada clase se trata como si fuera un objeto que incluye:
-
 - Una variable de tipo conjunto (Set) que contiene el conjunto de todos los objetos que son ejemplares de la clase.
 - La implementación de un método para el mensaje ***new***, que crea un nuevo objeto de la clase.
 ### Herencia
-
-Al igual que en la orientación a objetos tradicional, las bases de datos orientadas a objetos permiten construir jerarquías de clases a través de la **herencia**. Con el agregado que en este tipo de bases de datos en ocasiones suele ser difícil determinar la clase a la que pertenece a un objeto. Para explicar este punto, consideremos la siguiente jerarquía de clases:
-
+Al igual que en la orientación a objetos tradicional, las bases de datos orientadas a objetos permiten construir jerarquías de clases a través de la **herencia**. Con el agregado que en este tipo de bases de datos en ocasiones suele ser difícil determinar la clase a la que pertenece a un objeto. Para explicar este punto con más detalle, consideremos la siguiente jerarquía de clases expuesta en la imagen.
 ![[jerarquia-clases.png]]
 
 Recordemos que cada clase se comporta como un objeto que contiene los diferentes objetos de su tipo correspondiente, es sencillo determinar la pertenencia de un objeto a una clase que se encuentran en las hojas del árbol. Pero para aquellas clases que no son hojas este problema resulta más complejo, existiendo dos formas posibles de asociar los objetos con las clases:
-
-1. Se pueden asociar todos los objetos empleado con su clase, incluyendo a su ves los que sean elementos de administrativo, de cajero o de secretario, con la clase empleado.
-2. Sólo se pueden asociar con la clase empleado a los objetos empleado que no sean elementos de administrativo ni de cajero ni de secretario.
+1. Se pueden asociar todos los objetos del tipo *empleado* con su clase, incluyendo a su vez los que sean elementos de administrativo, de cajero o de secretario, con la clase empleado.
+2. Solamente se pueden asociar con la clase Empleado a los objetos del tipo *empleado* que no sean elementos de administrativo ni de cajero ni de secretario.
 
 >[!tldr] Herencia Múltiple
 >Puede que algunas bases de datos orientadas a objetos permitan la herencia múltiple, si bien esto permite mayor reutilización, pueden llegar a aparecer potenciales ambigüedades cuando ambas clases padres poseen un método o propiedad con el mismo nombre. Estas ambigüedades pueden manejarse de alguna de las siguientes maneras:
@@ -34,33 +24,26 @@ Recordemos que cada clase se comporta como un objeto que contiene los diferentes
 > - Escoger una de las superclases para heredar dicha propiedad o método según el orden en que se crearon las mismas superclases.
 > - Hacer que el usuario escoja de manera explícita una de las opciones en la definición de la subclase.
 > - Tratar la situación como si fuera un error.
-
 ### Identidad de los Objetos
-
-Los objetos de las bases de datos orientadas a objetos conservan su identidad aunque algunas de sus propiedades o las definiciones de los métodos cambien total o parcialmente con el tiempo. Este concepto de identidad no se aplica a las tuplas de las bases de datos relacionales. Las identidades de cada objeto puede ser asignada a través de alguna de las siguientes formas:
-
-- **Valor de datos**. Esta forma de identidad es utilizada en las bases de datos relacionales. En este caso el valor de uno de los atributos del objeto lo identificará unívocamente.
+Los objetos de las bases de datos orientadas a objetos conservan su identidad, aunque algunas de sus propiedades o las definiciones de los métodos cambien total o parcialmente con el tiempo. Este concepto de identidad no se aplica a las tuplas de las bases de datos relacionales. Las identidades de cada objeto puede ser asignada a través de alguna de las siguientes formas:
+- **Valor de datos**. Esta forma de identidad es utilizada en las bases de datos relacionales. En este caso, el valor de uno de los atributos del objeto lo identificará unívocamente.
 - **Nombre proporcionado por el usuario**. Esta forma de identidad suele utilizarse para los archivos en los sistemas de archivos. En este caso es el usuario pueden generar de forma manual el identificador.
 - **Incorporada**. Cada objeto recibe del sistema un identificador de manera automática en el momento en que se crea.
 
 >[!tldr] Objetos Compuestos
 >Aquellos objetos que contienen en alguna de sus propiedades a otros objetos se los denomina **objetos complejos o compuestos**. Por lo general cuando se posee este tipo de composiciones, esas propiedades hacen referencia al objeto perteneciente a la clase.
-
 ## Lenguaje de Programación Persistente
-
 Las bases de datos orientadas a objetos extienden un lenguaje de programación orientado a objetos ya existente para darle persistencia a los datos. Estos ***lenguajes de programación persistente (LPP)***, se diferencian de los lenguajes con SQL incorporado por los siguientes motivos:
-
-1. En los lenguajes con SQL incorporado el sistema de tipos del lenguaje anfitrión suele ser diferente al del lenguaje para la gestión de los datos.
+1. En los lenguajes con SQL incorporado, el sistema de tipos del lenguaje anfitrión suele ser diferente al del lenguaje para la gestión de los datos.
 2. En los lenguajes de programación persistente, el lenguaje de consulta se halla totalmente integrado con el lenguaje anfitrión y ambos poseen el mismo sistema de tipos.
 3. Los programadores que utilizan lenguajes con SQL incorporado son responsables de la escritura de código explícito para la búsqueda de los datos de la base de datos en la memoria.
-4. En los lenguajes de programación persistente los programadores pueden trabajar con datos persistentes sin tener que escribir de manera explícita código para buscarlos en la memoria o para volver a guardarlos en el disco.
+4. En los lenguajes de programación persistente, los programadores pueden trabajar con datos persistentes sin tener que escribir de manera explícita código para buscarlos en la memoria o para volver a guardarlos en el disco.
 
 La persistencia de los datos en los lenguajes de programación persistente pueden ser especificada de alguna de las siguientes maneras:
-
 - **Persistencia por Clases**: Se declara que una clase es persistente.
 - **Persistencia por Creación**: Se introduce una sintaxis nueva para crear los objetos persistentes mediante la extensión de la sintaxis para la creación de los objetos transitorios.
 - **Persistencia por Marcas**: Consiste en marcar los objetos como persistentes después de haberlos creado.
-- **Persistencia por Alcance**: Uno o varios objetos se declaran como objetos persistentes de manera explícita, estos objetos reciben el nombre de ***objetos raíz***. Todos los demás objetos serán persistentes si y sólo si son alcanzables desde el objeto raíz mediante una secuencia de una o más referencias.
+- **Persistencia por Alcance**: Uno o varios objetos se declaran como objetos persistentes de manera explícita, estos objetos reciben el nombre de ***objetos raíz***. Todos los demás objetos serán persistentes si y solo si son alcanzables desde el objeto raíz mediante una secuencia de una o más referencias.
 
 >[!tldr] Lenguajes para la Definición de Objetos de ODMG
 >El grupo de gestión de bases de datos de objetos (ODMG) ha trabajado en la normalización de las extensiones de los lenguajes para C++, Smalltalk y Java permitiendo la definición de bibliotecas de clases que permitan la persistencia de datos en estos lenguajes. La norma ODMG proporciona toda la funcionalidad mediante las bibliotecas de clases, sin ninguna extensión del lenguaje.
