--- a/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
+++ b/4º Año/Bases de Datos/Unidad 8/2. Indices e Indexacion.md
@@ -1,10 +1,8 @@
 Muchas consultas hacen referencia solo a una pequeña parte de los registros de un archivo, en esos casos lo más adecuado sería que el sistema fuese capaz de localizar directamente estos registros. Además, hay casos en el que se necesita cierto orden de acceso. Para facilitar estas formas de acceso se diseñan estructuras adicionales que se asocian a los archivos, las cuales reciben el nombre de ***índices***. Hay básicamente dos tipos de índices:
-
 - **Índices ordenados**: Están basados en una disposición ordenada de los valores.
 - **Índices asociativos**: Están basados en una distribución uniforme de los valores a través de una serie de cajones o buckets. El valor asignado a cada cajón está determinado por una función de asociación o hash.
 
 Existen varias técnicas de ***indexación y asociación*** de índices. Cada una tiene su propia área de aplicación que resuelve problemas específicos que se presentan al utilizar bases de datos. No obstante cada técnica debe ser valorada según los siguientes criterios:
-
 - Tipo de acceso.
 - Tiempo de acceso.
 - Tiempo de inserción.
@@ -13,26 +11,18 @@ Existen varias técnicas de ***indexación y asociación*** de índices. Cada un
 
 Los atributos o conjunto de atributos usados para buscar en un archivo reciben el nombre de ***claves de búsqueda*** ($K_B$), cada estructura de índice está asociada con una clave de búsqueda concreta. Si el archivo que contiene los registros está ordenado secuencialmente, el índice cuya clave de búsqueda especifica el orden secuencial del archivo es el índice primario.
 Los índices primarios también son llamados ***índices con agrupación*** mientras que los índices cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo se llaman índices secundarios o ***índices sin agrupación***.
-
 ## Índices Secuenciales
-
 Por lo general se suele asumir que todos los archivos están ordenados secuencialmente según alguna clave de búsqueda, este tipo de archivos reciben el nombre de ***archivos secuenciales indexados***. Y suelen ser empleados en aquellas aplicaciones que demandan un procesamiento secuencial del archivo completo así como un acceso directo a sus registros.
-
 ### Índices Secundarios
-
 Los índices secundarios son aquellos cuyas clave de búsqueda especifican un orden diferente del orden secuencial del archivo, por lo tanto, estos deben ser densos, con una entrada en el índice por cada valor de la clave de búsqueda, y un puntero a cada registro del archivo. Un índice secundario sobre una clave candidata es como un índice denso primario, con la particularidad de que los registros apuntados por los sucesivos valores del índice no están almacenados secuencialmente según ese campo.
 Si la clave de búsqueda de un índice secundario no es una clave candidata, no sería suficiente apuntar solo al primer registro de cada valor de la clave de búsqueda, ya que el resto de registros con el mismo valor de la clave de búsqueda podrían estar en cualquier otro sitio del archivo, para solucionar este problema se puede usar una estructura multinivel para implementar los índices secundarios sobre claves de búsquedas que no sean claves candidatas.
 Siguiendo el orden de un índice primario, una búsqueda secuencial es eficiente porque los registros del archivo están guardados físicamente en el mismo orden que el índice. No se puede almacenar el archivo ordenado físicamente por el orden de la clave de búsqueda del índice primario y la clave de búsqueda del índice secundario al mismo tiempo, ya que el orden de la clave de búsqueda secundaria y el orden físico difieren. Si se intenta examinar el archivo secuencialmente por el orden de la clave de búsqueda secundaria, es muy probable que la lectura de cada bloque suponga la lectura de un nuevo bloque del disco.
-
 >[!tldr] Índices de Cobertura
 >Los ***índices de cobertura*** almacenan los valores de algunos atributos junto con los punteros a los registros. El almacenamiento de valores de atributo adicionales es útil en los índices secundarios, ya que permite responder algunas consultas utilizando únicamente el índice, sin ni siquiera buscar en los registros de datos.
 
 Si un archivo tiene varios índices, siempre que se modifique el archivo, se debe actualizar cada uno de ellos. Los índices secundarios mejoran el rendimiento de las consultas que emplean claves que no son la clave de búsqueda primaria, pero requieren de tiempo adicional al actualizar los archivos.
-
 ### Índices Densos y Dispersos
-
 Un ***registro índice o entrada del índice*** consiste en el valor de la clave de búsqueda y punteros a uno o más registros con ese valor de la clave de búsqueda. Por su parte el puntero a un registro consiste en el identificador del bloque en disco y un desplazamiento interno que identifica el registro dentro de ese bloque, de acuerdo al tipo de punteros utilizados podemos dividir a los índices ordenados en dos clases:
-
 - **Índices densos**: Posee un registro índice por cada valor de clave de búsqueda que exista en el archivo. Los registros índices contiene el valor de la clave de búsqueda y el puntero al primer registro con el valor de esa clave de búsqueda.
 
 ![[indices-densos.png]]
@@ -44,71 +34,65 @@ Un ***registro índice o entrada del índice*** consiste en el valor de la clave
 
 Generalmente, es más rápido localizar un registro si se usa un índice denso en vez de un índice disperso. Sin embargo, los índices dispersos utilizan menos espacio, lo que permite tener cargado la totalidad del índice en memoria, además de requerir menor mantenimiento en las inserciones y borrados.
 Los diseñadores del sistema debe buscar un balance entre el tiempo de acceso, el espacio adicional requerido y tiempo de actualización. Si bien la decisión sobre que tipo de índices se deben utilizar depende de la aplicación en particular, una buena decisión es tener un índice disperso con una entrada del índice por cada bloque, de esta forma se minimizan los accesos a bloques mientras mantenemos el tamaño del índice tan pequeño como sea posible.
-
 >[!caution] Actualización y Mantención de los Índices
 >Sin importar el tipo de índice que se esté usando, los índices se deben actualizar siempre que se inserte o borre un registro del archivo, este tipo de operaciones van a realizarse o no dependiendo de si el índice es denso o disperso, por ejemplo, en el caso de los índices dispersos, no todas las operaciones de inserción y borrados actualizarán los índices.
-
 ### Índices Multinivel
-
 Aunque se utilicen índices dispersos, el propio índice podría ser demasiado grande para un procesamiento eficiente, si un índice es lo bastante pequeño como para guardarlo en la memoria principal, el tiempo de búsqueda para encontrar una entrada sería mucho menor. Mientras que si el índice es tan grande que se debe guardar en disco, la eficiencia en las consultas disminuyen, ya que se deben subir y bajar bloques del archivo de índices.
 Los Índices se almacenan como archivos secuenciales en disco, esto significa que buscar una entrada implicará leer varios bloques de disco. Esto empeora si se están utilizando bloques de desbordamiento, puesto que se tendría que recorrer todos los registros del archivo de forma casi obligatoria.
-Para resolver este problema se trata el índice como un archivo secuencial y se construye un índice disperso sobre el índice primario. En caso de que se quiera localizar un registro se usa en primer lugar una búsqueda binaria sobre el índice más externo para buscar el registro con el mayor valor de la clave de búsqueda que sea menor o igual al valor deseado. El puntero de ese registro índice apunta a un bloque en el índice más interno, sobre el cual se realizará el mismo proceso de búsqueda, dando como resultado un registro índice cuyo puntero apunta al bloque del archivo que contiene el registro buscado.
+Para resolver este problema se trata el índice como un archivo secuencial y se construye un índice disperso sobre el índice primario. En caso de que se quiera localizar un registro, se usa en primer lugar una búsqueda binaria sobre el índice más externo para buscar el registro con el mayor valor de la clave de búsqueda que sea menor o igual al valor deseado. El puntero de ese registro índice apunta a un bloque en el índice más interno, sobre el cual se realizará el mismo proceso de búsqueda, dando como resultado un registro índice cuyo puntero apunta al bloque del archivo que contiene el registro buscado.
 
 ![[indices-multinivel.png]]
 
 Usando los dos niveles de indexación y con el índice más externo en memoria principal, tenemos que leer un único bloque índice en vez de los siete que se leían con la búsqueda binaria. Si al archivo es extremadamente grande, incluso el índice exterior podría crecer demasiado para caber en la memoria principal. En este caso se podría crear un nuevo nivel de indexación, este proceso de división se podría repetir tantas veces como fuese necesario.
-
 ## Índices de Árbol B⁺
-
 El principal problema de los índices mencionados anteriormente es el rendimiento, ya que tanto la búsqueda en el índice como el recorrido secuencial de los datos se ven afectados negativamente a medida que aumentan los tamaños de los archivos, dado que después de cierto tiempo están obligados a reordenarse para mantener su eficiencia.
-En este contexto, la estructura de índice de árbol B⁺ es la más utilizada entre las estructuras de índices porque mantiene su eficiencia incluso con la inserción y eliminación de datos. Un índice de árbol B⁺ toma la forma de un *árbol equilibrado* donde la profundidad desde la raíz a cada una de sus hojas es la misma. Cada nodo que no es una hoja tiene entre $p/2$ y $p$ hijos, donde $p$ es el orden o grado del árbol el cual es fijo y depende de la cantidad de registros que puedan entrar en un bloque.
-Utilizar esta estructura de datos implica una reducción en el rendimiento al insertar y al borrar datos, además de ocupar espacio adicional. Aun así este tiempo adicional es aceptable incluso en archivos con altas frecuencias de modificación, ya que este tipo de estructuras evitan una reorganización masiva o total del archivo. En pocas palabras un ***índice de árbol B⁺*** es un índice multinivel en el cual todos sus nodos internos tienen la siguiente forma:
+En este contexto, la estructura de índice de árbol B⁺ es la más utilizada entre las estructuras de índices porque mantiene su eficiencia incluso con la inserción y eliminación de datos. Un índice de árbol B⁺ toma la forma de un *árbol equilibrado* donde la profundidad desde la raíz a cada una de sus hojas es la misma. Cada nodo que no es una hoja tiene entre $p/2$ y $p$ hijos, donde $p$ es el orden o grado del árbol el cual es fijo y depende de la cantidad de registros que puedan entrar en cada nodo u hoja.
+>[!note] Cálculo del Grado de los Nodos en los Árboles B⁺
+>En este tipo de estructura de datos, el tamaño de los punteros a registros es distinta al de los registros que apuntan a otro nodo del árbol, esto quiere decir que el grado de los nodos intermedios es distinto al de los nodos hojas. Las ecuaciones que nos permiten calcular el grado de cada nodo son las siguientes:
+>- Grado de los Nodos Intermedios:
+>$$(p \cdot P_a) + ((p - 1) \cdot K) \leq B$$
+>- Grado de los Nodos Hoja:
+>$$((p - 1) \cdot (P_r + K)) + P_a \leq B)$$
+>
+>En donde $p$ es el grado del nodo, $P_a$ es el tamaño del puntero a otro nodo del árbol, $P_r$ el tamaño del puntero a registro, $K$ el tamaño de la clave de búsqueda y $B$ el tamaño del bloque.
 
+Utilizar esta estructura de datos implica una reducción en el rendimiento al insertar y al borrar datos, además de ocupar espacio adicional. Aun así, este tiempo adicional es aceptable incluso en archivos con altas frecuencias de modificación, ya que este tipo de estructuras evitan una reorganización masiva o total del archivo. En pocas palabras, un ***índice de árbol B⁺*** es un índice multinivel en el cual todos sus nodos internos tienen la siguiente forma:
 $$
 < P_1 , K_1, P_2 , K_2, \cdots, K_{q–1} , P_q>
 $$
 
 Donde $q \leq p$, y $K_i$ son las claves de búsqueda, mientras que $P_i$ son los punteros de árbol. Esta estructura de datos posee las siguientes características:
 1. Para todos los elementos de los nodos internos se cumple que $K_1 < K_2 < K_3 \cdots$. Es decir, sus elementos están ordenados.
-2. Cada nodo interno a excepción de la raíz tiene como máximo $p$ punteros de árbol y al menos $p /2$ punteros de árbol, es decir cada nodo intermedio está siempre medio lleno.
+2. Cada nodo interno a excepción de la raíz tiene como máximo $p$ punteros de árbol y al menos $p /2$ punteros de árbol, es decir, cada nodo intermedio está siempre medio lleno.
 3. El nodo raíz tiene como mínimo dos punteros de árbol si es un nodo interno.
 4. Un nodo con $q$ punteros tiene $q – 1$ valores de clave de búsqueda.
 5. Todo nodo hoja de los árboles B⁺ de orden $p$ tienen la siguiente forma:
-
 $$
 << K_1, Pr_1, K_2, Pr_2 ,\cdots, K_{q–1} , Pr_{q-1}> P_{sig}>
 $$
 
 6. Cada nodo hoja tiene al menos $p_{hoja} / 2$ valores.
 7. Todas las hojas están al mismo nivel de profundidad en el árbol.
-8. Los punteros de los nodos internos son punteros a árboles mientras que los punteros de los nodos hoja, a excepción de $P_{sig}$, son punteros a datos. Puede que algunas implementaciones utilicen también un puntero $P_{ant}$ en caso de que se necesite realizar un recorrido en forma inversa.
+8. Los punteros de los nodos internos son punteros a árboles, mientras que los punteros de los nodos hoja, a excepción de $P_{sig}$, son punteros a datos. Puede que algunas implementaciones utilicen también un puntero $P_{ant}$ en caso de que se necesite realizar un recorrido en forma inversa.
 9. Si la clave de búsqueda no es clave candidata, cada $Pr_i$ debe apuntar a un cajón de punteros a registros que apuntan a registros cuyo valor de campo es $K_i$.
-
 ### Consulta y Actualizaciones en Árboles B⁺
-
 El proceso para buscar los registros cuyo valor de la clave de búsqueda sea $V$ es el siguiente: 
-
 1. Se examina el nodo raíz para buscar el menor valor de la clave de búsqueda mayor o igual que $V$.
 2. Se utiliza el puntero $P_i$ para acceder al siguiente nodo. Si en ese nodo no se encuentra ese valor, entonces $V \geq K_{q–1}$, donde $q$ es el número de punteros del nodo. En este caso se sigue $P_q$ hasta el siguiente nodo.
 
 Este proceso se repite, pero esta vez en uno de los nodos intermedios, hasta que finalmente se alcanza un nodo hoja. Una vez se llega a un nodo hoja, si se encuentra que el valor $K_i = V$, entonces el puntero $Pr_i$ nos conducirá al registro o cajón deseado. Si no se encuentra el valor $V$ en el nodo hoja, no existe ningún registro con el valor clave $V$.
-
 >[!note] Redundancia en el Almacenamiento de Datos
 >Nótese, que en los árboles B⁺ solos los nodos hojas tiene punteros a registros, por lo que puede suceder que ciertos valores de la clave de búsqueda se repitan en los nodos intermedios, lo que genera una redundancia en muchos casos inncesaria tal y como se ve en la imagen.
 >
 >![[arbol-bplus-ejemplo.png]]
 
 Para procesar una consulta, se tiene que recorrer un camino en el árbol desde la raíz hasta algún nodo hoja. Si hay $n$ valores de clave de búsqueda en el archivo, este camino no será más largo que $log_{p/2} (n)$. Generalmente, un nodo se construye para tener el mismo tamaño que un bloque de disco.
-
 >[!tldr] Eficiencia en las Búsquedas
 >Supongamos que el tamaño de las claves de búsqueda posee un tamaño de 12 bytes y un tamaño del puntero a disco de 8 bytes, entonces $p$ está alrededor de 200. Incluso con una estimación más conservadora de 32 bytes para el tamaño de las claves de búsqueda, $p$ está en torno a 100. Con $p = 100$, si se tienen un millón de valores de clave de búsqueda en el archivo, una búsqueda necesita solamente $log_{50} (1.000.000) = 4$ accesos a nodos.
 
 El borrado y la inserción son mucho más complejos que las búsquedas, ya que podría ser necesario dividir un nodo como resultado de una inserción o fusionar y/o redistribuir nodos como resultado de una eliminación ($q < p/2$). Además, cuando se divide un nodo o se fusionan un par de ellos, se debe asegurar que el árbol siga estando equilibrado.
 Para las inserciones se utiliza la misma técnica utilizada para la búsqueda de registros, si el valor de la clave de búsqueda ya aparece en el nodo hoja, se inserta un nuevo registro en el archivo y, si es necesario, un puntero al cajón. Pero si el valor de la clave de búsqueda no aparece, se inserta el valor en el nodo hoja de tal manera que las clave de búsqueda permanezcan ordenadas, para posteriormente insertar el nuevo registro en el archivo y, si es necesario, creamos un nuevo cajón con el puntero apropiado.
 Para la eliminación de un registro, primero se realiza una búsqueda para encontrar el o los registros deseados y luego eliminarlos del archivo. Si no hay un cajón asociado con el valor de la clave de búsqueda o si el cajón se queda vacío como resultado del borrado, se borra el valor de la clave de búsqueda del nodo hoja.
-
 ## Índices de Árbol B
-
 Los ***índices de árbol B*** son similares a los índices de árbol B⁺, con una leve diferencia en sus enfoques, ya que los árboles B eliminan el almacenamiento redundante de los valores de la clave de búsqueda, puesto que las claves de búsqueda no están repetidas en el árbol B, disminuyendo el espacio empleado para almacenar el índice. Sin embargo, como las claves de búsqueda que aparecen en los nodos internos no aparecen en ninguna otra parte del árbol B, se debe incluir un campo adicional para un puntero a datos por cada clave de búsqueda de un nodo interno, estos campos adicionales apuntan a registros del archivo o a los cajones de la clave de búsqueda asociada. En otras palabras, el grado de los árboles B va a ser menor a los del los árboles B⁺.
 Una de las principales desventajas de los árboles B es que en caso de que se utilice dicho índice para buscar múltiples registros, se tendrá que hacer el recorrido del árbol para cada uno de estos registros, mientras que en los árboles B⁺ solo se debe ir hasta las hojas y luego recorrerlas de forma secuencial, lo que ahorra más tiempo.
-
