--- a/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
@@ -1,10 +1,8 @@
 El procesamiento de consultas involucra una serie de actividades implicadas en la extracción de datos de una base de datos. Estas actividades incluyen la traducción de consultas `SQL` de alto nivel a expresiones implementadas en el nivel físico del sistema, así como transformaciones de optimización de consultas y la evaluación real de las mismas. Los pasos involucrados en el procesamiento de consultas involucra el ***análisis y traducción***, la ***optimización*** y finalmente la ***evaluación*** de la consulta.
-
 ![[procesamiento-consultas.png]]
 
 El procesamiento de consultas puede realizarse de forma compilada o en tiempo real. En caso de la compilación, las bases de datos procesan la consulta y generan un archivo que contiene todos los pasos que debe realizar la base de datos para extraer los datos de forma correcta. El procesamiento en tiempo real implica el procesamiento y posterior ejecución de la consulta, sin generar ningún archivo adicional.
 La primera acción que el sistema tiene que emprender para procesar una consulta es su traducción a su formato interno. Este proceso de traducción es similar al trabajo que realiza el analizador léxico y semántico de un compilador convencional, construyendo un árbol para el análisis de la consulta, que se transformará posteriormente en una expresión del álgebra relacional.
-
 >[!caution] Representación de las Consultas a las Bases de Datos
 >Con fines didácticos, todas las explicaciones se realizarán utilizando el álgebra relacional como representación intermedia en el procesamiento y optimización de consultas en bases de datos. Actualmente, las bases de datos emplean una representación intermedia de las consultas SQL, similar a las utilizadas por los compiladores e interpretes, para procesamiento de las consultas.
 
@@ -12,17 +10,13 @@ Dada una consulta hay generalmente distintos métodos para obtener la respuesta.
 Para especificar completamente cómo evaluar una consulta, no basta con proporcionar la expresión del álgebra relacional, además hay que anotar en ella las instrucciones que especifiquen cómo evaluar cada operación, este nuevo parámetro podría servir para establecer las prioridades en las consultas.
 Las operaciones del álgebra relacional anotadas con instrucciones sobre su evaluación reciben el nombre de ***primitivas de evaluación***. El ***motor de ejecución de consultas*** utilizan secuencias de operaciones primitivas para escoger y establecer el ***plan de ejecución de la consulta*** o ***plan de evaluación de la consulta***, que posteriormente será ejecutado.
 Los diferentes planes de evaluación de una misma consulta dada pueden tener costes distintos. No se puede esperar que los usuarios escriban las consultas de manera que sugieran el plan de evaluación más eficiente. En su lugar, es responsabilidad del sistema construir un plan de evaluación que minimice el coste de la evaluación de la consulta; esta tarea se denomina ***optimización de consultas***.
-
 ## Optimización de Consultas
-
 La optimización de consultas es el proceso de selección del plan de evaluación de las consultas más eficiente de entre las muchas estrategias generalmente disponibles para el procesamiento de una consulta dada, especialmente si la consulta es compleja.
 Un aspecto de la optimización de las consultas tiene lugar en el nivel del álgebra relacional, donde el sistema intenta hallar expresiones equivalentes a la expresión dada, pero cuya ejecución sea más eficiente. Otro aspecto es la elección de la estrategia para el procesamiento de la consulta, como puede ser la selección del algoritmo que se usará para ejecutar una operación, la selección de los índices concretos a emplear, entre otras.
-
 >[!tldr] Importancia en la Elección de los Planes de Evaluación
 > La diferencia en coste entre una estrategia buena y una mala suele ser sustancial, y puede resultar de varios órdenes de magnitud. Por tanto, merece la pena que el sistema invierta una cantidad importante de tiempo en la selección de una buena estrategia para el procesamiento de la consulta.
 
 Para hallar el plan de evaluación de consultas menos costoso el optimizador necesita generar planes alternativos que produzcan el mismo resultado que la expresión dada y escoger el de menor coste. La generación de planes de evaluación de consultas implica tres etapas:
-
 1. Generar expresiones que sean equivalentes lógicamente a la expresión dada.
 2. Estimar los costes de cada plan de evaluación.
 3. Anotar las expresiones alternativas resultantes para generar planes distintos de ejecución.
@@ -30,7 +24,6 @@ Para hallar el plan de evaluación de consultas menos costoso el optimizador nec
 La primera y tercera etapa se entrelazan al momento de la optimización de las consultas, ya que algunas expresiones se generan e inmediatamente son anotadas, por otro lado, la segunda etapa se realiza más en segundo plano recopilando información estadística sobre las relaciones involucradas en la consulta.
 Para implementar la primera etapa el optimizador de consultas debe generar expresiones equivalentes a la expresión dada. Se dice que dos expresiones del álgebra relacional son equivalentes si, en cada ejemplar legal de la base de datos, las dos expresiones generan el mismo conjunto de tuplas, la manera de obtener expresiones equivalentes es mediante las ***reglas de equivalencia***, que especifican el modo de transformar una expresión en otra lógicamente equivalente[^1].
 Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste de cada operación. Aunque el coste exacto es difícil de calcular, dado que depende de los siguientes parámetros:
-
 - **Costo de acceso al almacenamiento secundario**: Tiempo de acceso a los registros de un archivo, este tiempo va a depender en parte del tipo de estructuras de acceso a dicho fichero.
 - **Costo de almacenamiento**: Cantidad ficheros intermedios generados por la estrategia de ejecución de la consulta.
 - **Costo computacional**: Tiempo de ejecución de operaciones sobre los buffers de datos durante la ejecución de la consulta.
@@ -38,7 +31,6 @@ Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste
 - **Costo de comunicaciones**: Tiempo de envío de la consulta y de sus resultados desde el sitio donde se ubica la base de datos hasta el terminal donde se originó la consulta.
 
 En lugar de calcular los costes de forma exacta, los gestores de las bases de datos optan por realizar estimaciones de costes, reduciendo así la sobrecarga y el tiempo de cómputo dedicado al cálculo de los costes. Las estimaciones se calculan a partir de información estadística la cual es almacenado en los catálogos de los sistemas de gestión de bases de datos, los datos que estos catálogos contiene son los siguientes:
-
 1. **El número de registros (r)**: Representa la cantidad total de registros que hay en un fichero o tabla de la base de datos.
 2. **El tamaño medio de los registros (R)**: Indica el tamaño promedio de un registro. Este valor es importante para calcular el espacio que ocupan los datos en almacenamiento.
 3. **El número de bloques (b)**: Refleja la cantidad de bloques de almacenamiento que contiene la tabla o una aproximación de este mismo.
@@ -52,7 +44,6 @@ En lugar de calcular los costes de forma exacta, los gestores de las bases de da
 >Las bases de datos operan de este modo porque la actualización de las estadísticas no supone un cambio sustancial en las estimaciones realizadas para cada plan de evaluación de consultas, siempre y cuando el tamaño de las actualizaciones realizadas no posea un tamaño considerable.
 
 Además de estos datos, la mayoría de las bases de datos almacenan la distribución de los valores de cada atributo en forma de histograma, en parte porque estos datos son fáciles de almacenar y utilizan poco espacio en sus catálogos. Los gestores de bases de datos utilizan varios tipos de histogramas, como lo podrían ser los *histogramas de equianchura* y los *histogramas de equiprofundidad*[^2].
-
 >[!tldr] Selectividad
 >La selectividad es un concepto crucial en el procesamiento de consultas, ya que ayuda a determinar cuántos registros cumplirán con una condición específica. Es una medida que indica cómo se distribuyen los valores de una columna en relación con una condición específica.
 >En este contexto el ***número de valores distintos (d)*** es la cantidad de valores únicos que puede tener un atributo en una tabla de la base de datos. Por ejemplo, si una columna tiene el atributo "ciudad" y en la base de datos hay 10 ciudades diferentes, entonces d=10. Mientras que la ***selectividad (sl)*** es la proporción de registros que cumplen una condición de igualdad sobre un atributo. Por otro lado, la ***cardinalidad de selección (s)*** de un atributo es el número medio de registros que cumplirán una condición de igualdad sobre ese atributo y se calcula de la siguiente manera:
@@ -61,13 +52,11 @@ Además de estos datos, la mayoría de las bases de datos almacenan la distribuc
 >- Si el atributo es una clave, es decir, cada valor es único, entonces $d = r$ y $sl = 1/r$, por lo tanto, $s = 1$.
 >- Si el atributo no es clave y los $d$ valores están distribuidos uniformemente $sl = 1 / d$ y, por lo tanto, $s = r/d$.
 
-## Elección de los Planes de Evaluación
-
+## lección de los Planes de Evaluación
 La generación de expresiones solamente es una parte del proceso de optimización de consultas, ya que cada operación de una expresión puede implementarse con algoritmos diferentes. Por esta razón se necesita un plan de evaluación para definir exactamente el algoritmo que se usará para cada operación y el modo en que se coordinará la ejecución de las operaciones.
 Cada una de las operaciones relacionales se pueden implementar en varios algoritmos diferentes e incluso utilizar diferentes estructuras de índices, lo que da lugar a planes de evaluación alternativos. Además, hay que tomar decisiones sobre el ***encauzamiento*** de las operaciones, es decir, el orden en el que estas operaciones relacionales deben ser realizadas.
 Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más óptima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en ciertas ocasiones, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
 Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación adecuado. El primero busca todos los planes y escoge el mejor basándose en los costes, mientras que el segundo usa la heurística para escoger el plan. Cabe aclarar que los optimizadores de consultas reales incorporan elementos de ambos enfoques.
-
 - **Operación basada en costes**. Los optimizadores generan una gama de planes de evaluación a partir de la consulta dada empleando reglas de equivalencia, para posteriormente escogen el de coste mínimo. Para las consultas complejas el número de planes de consulta diferentes que son equivalentes a un plan dado puede ser grande. Para evitar esto se puede desarrollar un algoritmo de ***programación dinámica*** para hallar los órdenes de las operaciones, almacena los resultados obtenidos y vuelve a utilizarlos en próximas consultas, reduciendo enormemente el tiempo de ejecución[^3].
 
 >[!tldr] Orden de Reunión de las Relaciones
@@ -77,9 +66,7 @@ Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación 
 
 >[!info] Heurística para la Proyección
 >Las operaciones de proyección y selección, reduce el tamaño de las relaciones, Por lo tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
-
 ## Evaluación de Expresiones y Encauzamiento
-
 La manera más simple de evaluar una expresión es realizar las distintas operaciones de consulta una tras otro en el orden establecido por el plan de evaluación. El resultado de cada evaluación se materializa en una relación temporal que será utilizada posteriormente, este proceso recibe el nombre de ***evaluación materializada***. Este método requiere la construcción de relaciones temporales, y por ende la escritura de estas mismas en disco, lo que no es muy eficiente.
 Puede mejorarse este método utilizando ***memoria intermedia doble***, de este modo una de las memorias es utilizada para realizar la ejecución de programa y en la otra se irán copiando todos los resultados de las consultas. Esta alternativa no es muy deseable debido a la sobrecarga adicional que recibiría el gestor de memoria intermedia.
 Un enfoque alternativo es evaluar varias operaciones de manera simultánea en un cauce, con los resultados de una operación pasados a la siguiente, sin la necesidad de almacenar relaciones temporales, reduciendo al mínimo la cantidad de archivos intermedios. Este proceso se lleva a cabo combinando varias operaciones relacionales en un *encauzamiento* de operaciones, en el cual se le pasan los resultados de una operación a la siguiente de forma inmediata, eliminando así los costes de leer y escribir archivos intermedios. Este tipo de operaciones recibe el nombre de ***evaluación encauzada***.
