--- a/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 3/1. Modelo Relacional.md
@@ -1,19 +1,13 @@
 El **modelo relacional** fue introducido en 1970 por el matemático Edgar D. Codd, y debido a su simplicidad, la posibilidad de poder realizar consultas de manera declarativa y su fundamento matemático tuvo una amplia difusión.
 En este modelo se representa a las Bases de datos como una colección de archivos en forma tabular que se denominan ***relaciones***, las cuales poseen dos elementos, las tuplas (filas) y sus atributos (columnas). Cada atributo de una relación posee un nombre, el conjunto de valores permitidos para cada uno de estos atributos recibe el nombre de ***dominio***. Los valores para los atributos deben ser atómicos, es decir, no admite atributos compuestos o multivaluados. Además, los atributos poseen un valor especial, *el nulo*, el cual es miembro de todos los dominios existentes. Formalmente, sean $A_1, A_2, \dots, A_n$ atributos, $R = (A_1, A_2, \dots, A_n)$ es el esquema de la relación e $r(R)$ es una relación en el esquema $R$, es decir, una instancia del esquema $R$.
 En este contexto la información se divide en partes, donde cada una de esas partes almacena parte de la información, esto se hace porque de esta forma evitamos la repetición de la información y el uso excesivo de los valores nulos, los cuales suelen causar muchos problemas.
-
 ## Lenguajes de Consultas
-
 Los lenguajes de consultas son lenguajes con los cuales los usuarios solicitan información a la base de datos, estos lenguajes pueden ser ***procedimentales*** o ***declarativos***. Los lenguajes puros proveen una base sólida para los lenguajes de consulta comerciales utilizados por las bases de datos, dentro de estos lenguajes puros encontramos:
-
 - Álgebra Relacional.
 - Cálculo Relacional de Tuplas.
 - Cálculo Relacional de Dominios.
-
 ### Álgebra Relacional
-
 Es un lenguaje procedimental, en el sentido de que se tiene que expresar todas las operaciones a realizar. Cuenta con 6 operadores básicos, los cuales son suficientes para expresar cualquier consulta del álgebra relacional, estas operaciones son:
-
 - **Selección**. Formalmente denotado como $\sigma_p(r)$, donde $p$ es un predicado, es decir, una fórmula que se emplea en el cálculo proposicional, que consiste en términos conectados con operadores lógicos y aritméticos. Se define como:
 $$
 \sigma_p(r) = \{t |t \in r \land p(t) \}
@@ -40,7 +34,6 @@ $$
 >En este caso el resultado de la expresión $E$ posee el nombre $x$ y sus atributos poseen el nombre $A_1, A_2, \dots, A_n$.
 
 Al modelo se le agregaron un conjunto de operaciones adicionales, las cuales no añaden nuevas propiedades al álgebra, sino que simplifican las consultas. Estas operaciones son:
-
 - **Intersección de Conjuntos**. Formalmente denotado como $r \cap s$, donde $r$ y $s$ son relaciones. Al igual que la unión y la diferencia, la intersección requiere que se satisfagan las mismas condiciones, es decir, que los conjuntos tengan la misma aridad y el mismo dominio para todos sus $i$ atributos. Se define como:
 $$
 r \cap s = \{t|t\in r \land t \in s\}
@@ -52,11 +45,8 @@ $$
 		- $t$ tiene el mismo valor que $t_s$ en $s$.
  - **División**. Formalmente denotado como $r \div s$, donde $r$ y $s$ son relaciones. Resulta adecuado a la hora de realizar consultas del tipo "*todos los*", por ejemplo, sea $r(R)$ y $s(S)$ relaciones y $S \subseteq R$, el resultado de $r \div s$ es una relación sobre el esquema $R - S$.
 - **Asignación**. Formalmente denotada como $\leftarrow$, es una consulta que resulta conveniente para realizar consultas complejas. Permite escribir una expresión del álgebra relacional por partes utilizando la asignación a una variable de relación temporal, la cual puede utilizarse para expresiones posteriores.
-
 #### Álgebra Relacional Extendida
-
 Con el paso del tiempo se le fue agregando mucho mayores funcionalidades y propiedades al álgebra relacional, aunque este tipo de operaciones no forman parte del estándar. 
-
 - **Proyección Generalizada**. Amplía la operación proyección, permitiendo que se utilicen *funciones aritméticas* en la lista de proyección, redefiniéndola como:
 $$
 \varPi_{F^1, F^2, \dots, F^n}(E)
@@ -73,15 +63,12 @@ En donde $E$ es cualquier tipo de expresión del álgebra relacional, $G_1, G_2,
 - **Borrar**. En el álgebra relacional, los borrados se expresan de la siguiente manera, $r \leftarrow r- E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Inserción**. En el álgebra relacional, las inserciones se expresan de la siguiente manera, $r \leftarrow r \cup E$, donde $r$ es una relación y $E$ es una expresión del álgebra relacional.
 - **Actualización**. Se puede utilizar el operador proyección generalizada para realizar esta tarea de la siguiente manera -> $r \leftarrow \varPi_{F^1, F^2, \dots ,F^i}(r)$, donde cada $F_i$ representa una función que se aplica a cada i-ésimo atributo de $r$. En caso de que el atributo no se modifique solo se indica el atributo, pero en caso de que si se actualice se debe utilizar una expresión que implique constantes y los atributos de $r$.
-
 ### Cálculo Relacional de Tuplas
-
 El cálculo relacional de tuplas, es un lenguaje de consulta ***declarativo***. Describe la información deseada sin dar un procedimiento específico para obtenerla. Las consultas en el cálculo relacional de tuplas se expresan como:
 $$
 \{t | P(t)\}
 $$
 Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el predicado $P$ es cierto para $t$. Además, se utiliza $t[A]$ para denotar el valor de la tupla $t$ en el atributo $A$ y $t \in r$ para denotar que la tupla $t$ pertenece a la relación $r$, donde $P$ es una fórmula similar a la del cálculo de predicados que consta de las siguientes componentes:
-
 - **Conjuntos de *atributos* y *constantes***.
 - **Conjunto de operaciones de comparación** ($<, >, \leq, \geq, =, \neq$).
 - **Conjunto de conectores** ($\lor, \land, \neg$).
@@ -90,51 +77,51 @@ Cuya interpretación sería: todos los conjuntos de tuplas para el cuales el pre
 	- $\exists \ t \in r(Q(t))$ -> Existe una tupla $t$ en la relación $r$ tal que el predicado $Q(t)$ es verdadero.
 	- $\forall \ t \in r(Q(t))$ -> $Q$ es verdadero para toda tupla $t$ en la relación $r$.
 
->[!example] Ejemplos de Consultas con el Cálculo Relacional de Tuplas
->Supongamos que queremos filtrar todas las tuplas de una relaciones que satisfagan una condición, por ejemplo, todos los préstamos superiores a los 1200 dólares, eso se conseguiría de la siguiente manera:
->$$
->\{t| t \in prestamo \ \land t[importe] > 1200\}
->$$
->Supóngase que sólo se desea obtener el atributo *numero_prestamo*, en vez de todos los atributos de la relación préstamo. Para escribir esta consulta en cálculo relacional de tuplas hay que incluir una expresión de relación sobre el esquema, quedándonos de la siguiente manera:
->$$
->\{t | \exists s \in prestamo (t[numero\_prestamo] = s[numero\_prestamo] \land s[importe] > 1200)\}
->$$
->La variable tupla $t$ solo se define para el atributo numero_prestamo, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
->Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de "*Arganzuela*", eso se logra de la siguiente manera:
->$$
->\begin{align*}
->\{t| \exists \ r \in cliente (r[nombre\_cliente] = t[nombre\_cliente]) \ \land \\ 
->(\forall \ u \in sucursal (u[ciudad\_sucursal] = \text{"Arganzuela"} ) \Rightarrow \\ 
->\exists \ s \in impositor (t[nombre\_cliente] = s[nombre\_cliente] \\ 
->\land \ \exists \ w \in cuenta (w[numero\_cuenta] = s[numero\_cuenta] \\ 
->\land \ w[nombre\_sucursal] = u[nombre\_sucursal])))\}
->\end{align*}
->$$
 
+Supongamos que queremos filtrar todas las tuplas de una relaciones que satisfagan una condición, por ejemplo, todos los préstamos superiores a los 1200 dólares, eso se conseguiría de la siguiente manera:
+$$
+\{t| t \in prestamo \ \land t[importe] > 1200\}
+$$
+Supóngase que sólo se desea obtener el atributo *numero_prestamo*, en vez de todos los atributos de la relación préstamo. Para escribir esta consulta en cálculo relacional de tuplas hay que incluir una expresión de relación sobre el esquema, quedándonos de la siguiente manera:
+$$
+\{t | \exists s \in prestamo (t[numero\_prestamo] = s[numero\_prestamo] \land s[importe] > 1200)\}
+$$
+
+La variable tupla $t$ solo se define para el atributo numero_prestamo, dado que es el único atributo para el que se especifica una condición para $t$. Por tanto, el resultado es una relación de **(*numero_prestamo*)**.
+Supongamos que queremos realizar la operación de división, pero en el cálculo relacional de tuplas, queremos listar a todos los clientes que tengan una cuenta en todas las sucursales de "*Arganzuela*", eso se logra de la siguiente manera:
+$$
+\begin{align*}
+\{t| \exists \ r \in cliente (r[nombre\_cliente] = t[nombre\_cliente]) \ \land \\ 
+(\forall \ u \in sucursal (u[ciudad\_sucursal] = \text{"Arganzuela"} ) \Rightarrow \\ 
+\exists \ s \in impositor (t[nombre\_cliente] = s[nombre\_cliente] \\ 
+\land \ \exists \ w \in cuenta (w[numero\_cuenta] = s[numero\_cuenta] \\ 
+\land \ w[nombre\_sucursal] = u[nombre\_sucursal])))\}
+\end{align*}
+$$
 ### Cálculo Relacional de Dominio
-
 Es un lenguaje de consulta declarativo, equivalente en poder al cálculo relacional de tuplas, donde cada consulta es una expresión de la forma:
 $$
 \{<X_1, X_2, \dots X_n>| P(X_1, X_2, \dots X_n)\}
 $$
-En donde $X_1, X_2, \dots X_n$ representan a los atributos de las tuplas pertenecientes a una relación y $P$ es una fórmula similar a la del cálculo de predicados definido en el cálculo relacional de tuplas.
 
->[!example] Ejemplos de Consultas con el Cálculo Relacional de Dominio
->Por cuestiones prácticas tomaremos los mismos ejemplos que dimos en el cálculo relacional de tuplas, pero esta vez escritas en esta notación.
->Para determinar todos los préstamos que tienen un importe mayor a 1200 dorales, la petición se realizaría de la siguiente manera:
->$$
->\{<p,s,i>| <p,s,i> \in prestamo \land i > 1200\}
->$$
->En este caso del lado izquierdo expresamos todos los atributos de retorno, y del lado derecho todas las condiciones a cumplir, en caso de que solo queramos saber el número de los préstamos con monto superior a 1200 dólares, entonces la petición se haría de esta forma:
->$$
->\{<p>| \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
->$$
->Aunque la segunda consulta tenga un aspecto muy parecido al de la que se escribió para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$ restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
->En caso de que queramos traer los nombres de todas las personas que tienen una cuenta en todas las sucursales de "*Arganzuela*", lo haríamos de la siguiente manera:
->$$
->\begin{align*}
->\{<n> | \exists \ d,c(<n, d, c> \in cliente \land \forall \ x,y,z(<x,y,z> \in prestamo \land y = \text{"Arganzuela"} \Rightarrow \\
->\exists \ a,b (<a,x,b> \in cuenta \ \land <n, a> \in impositor))\}
->\end{align*}
->$$
+En donde $X_1, X_2, \dots X_n$ representan a los atributos de las tuplas pertenecientes a una relación y $P$ es una fórmula similar a la del cálculo de predicados definido en el cálculo relacional de tuplas.
+Por cuestiones prácticas tomaremos los mismos ejemplos que dimos en el cálculo relacional de tuplas, pero esta vez escritas en esta notación.
+Para determinar todos los préstamos que tienen un importe mayor a 1200 dorales, la petición se realizaría de la siguiente manera:
+$$
+\{<p,s,i>| <p,s,i> \in prestamo \land i > 1200\}
+$$
+
+En este caso del lado izquierdo expresamos todos los atributos de retorno, y del lado derecho todas las condiciones a cumplir, en caso de que solo queramos saber el número de los préstamos con monto superior a 1200 dólares, entonces la petición se haría de esta forma:
+$$
+\{<p>| \exists s,i (<p,s,i> \in prestamo \land i > 1200)\}
+$$
+
+Aunque la segunda consulta tenga un aspecto muy parecido al de la que se escribió para el cálculo relacional de tuplas, hay una diferencia importante. En el cálculo de tuplas, cuando se escribe $\exists s$ para alguna variable tupla $s$, se vincula inmediatamente con una relación escribiendo $\exists s \in r$. Sin embargo, cuando se usa $\exists s$ en el cálculo de dominios, $b$ no se refiere a una tupla, sino a un valor de dominio. Por tanto, el dominio de la variable $s$ no está restringido hasta que la subfórmula $< p, s, i > \in prestamo$ restringe $s$ a los nombres de sucursal que aparecen en la relación préstamo.
+En caso de que queramos traer los nombres de todas las personas que tienen una cuenta en todas las sucursales de "*Arganzuela*", lo haríamos de la siguiente manera:
+$$
+\begin{align*}
+\{<n> | \exists \ d,c(<n, d, c> \in cliente \land \forall \ x,y,z(<x,y,z> \in prestamo \land y = \text{"Arganzuela"} \Rightarrow \\
+\exists \ a,b (<a,x,b> \in cuenta \ \land <n, a> \in impositor))\}
+\end{align*}
+$$
 
