--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -1,10 +1,9 @@
 ## Vistas en las Bases de Datos
-
 Las vistas representa un conjunto de resultados de una consulta predefinida. Funciona como una "ventana" o "vista" de una tabla o combinación de tablas, pero no almacena datos por sí misma. En cambio, genera sus resultados cada vez que se la consulta, basándose en la consulta SQL que la define. Provee un mecanismo para ocultar datos para ciertos usuarios. En el siguiente ejemplo se muestra como se crea una vista en SQL:
-
 ```sql
--- Una vista que contiene el nombre de la sucursal y de los clientes que tienen
--- una cuenta o un prestamo en una sucursal
+-- Una vista que contiene el nombre de la sucursal y de
+-- los clientes que tienen una cuenta o un prestamo en
+-- una sucursal
 CREATE VIEW total_clientes AS
 	SELECT nombre_sucursal, nombre_cliente
 		FROM depositante, cuenta
@@ -12,22 +11,20 @@ CREATE VIEW total_clientes AS
     UNION
 	SELECT nombre_sucursal, nombre_cliente
 	    FROM prestatario, prestamo
-		WHERE prestatario.nro_prestamo = prestamo.nro_prestamo
+		WHERE prestatario.nro_prestamo = prestamo.nro_prestamo;
 ```
 
 Cuando se define una vista, también se puede especificar el esquema que esta tendrá, además se pueden realizar operaciones de `JOIN`, y/o subconsultas, por ejemplo:
-
 ```sql
-CREATE VIEW prestamo_sucursal(nombre_sucursal, num_prestamo, ciudad_sucursal) AS
+CREATE VIEW prestamo_sucursal(nombre_sucursal,
+							  num_prestamo, 
+							  ciudad_sucursal) AS
 	SELECT S.nombre_sucursal, P.nro_prestamo, S.ciudad_sucursal
 	   FROM prestamo P, sucursal S
-	   WHERE P.nombre_sucursal = S.nombre_sucursal
+	   WHERE P.nombre_sucursal = S.nombre_sucursal;
 ```
-
 ### Modificación de la Base de Datos
-
 SQL te permite borrar tuplas de las distintas tablas de una base de datos, la forma de realizar este borrado sigue siempre la misma estructura que la de los siguientes ejemplos:
-
 ```sql
 -- Borra todas las cuentas de la sucursal Centro
 DELETE FROM cuenta
@@ -37,18 +34,17 @@ DELETE FROM cuenta
 DELETE FROM cuenta
 	WHERE nombre_sucursal IN (SELECT nombre_sucursal
 								 FROM sucursal
-								 WHERE ciudad_sucursal = 'Concordia')
+								 WHERE ciudad_sucursal = 'Concordia');
 ```
 
 En caso de que deseemos insertar datos en una tabla, existen dos posibles formas de hacerlo, la primera consiste en especificar la tupla que se desea insertar utilizando constantes, y la segunda es formulando una consulta en la cual sus resultados se insertaran en la tabla especificada. En ambos casos el dominio de los atributos que se están insertando deben ser los mismos que el de los atributos definidos en la tabla, además de poseer la misma aridad que dicha tabla. Veamos algunos ejemplos:
-
 ```sql
 -- Se crea una nueva cuenta especificando la tupla a insertar
 INSERT INTO cuenta
-	VALUES('C-5568', 'Centro', 1.200,00)
+	VALUES('C-5568', 'Centro', 1.200,00);
 
--- Se crean nuevas cuentas de ahorro con 200 pesos para cada cliente de la 
--- sucursal centro que tenga un prestamo
+-- Se crean nuevas cuentas de ahorro con 200 pesos para cada
+-- cliente de la sucursal centro que tenga un prestamo
 INSERT INTO cuenta
 	SELECT nro_cuenta, nombre_sucursal, 200
 		FROM prestamo
@@ -56,35 +52,36 @@ INSERT INTO cuenta
 ```
 
 En el caso de que se inserten valores utilizando una consulta, se debe asegurar que dicha consulta termine antes de introducir estos datos en la tabla, porque de lo contrario puede que se introduzcan infinita cantidad de tuplas en la tabla.
-
 >[!tldr] Inserción de Valores Insuficientes
 >Si no se tiene valores para todas las columnas, en algunos casos estos se pueden omitir, ya que el gestor de la base de datos completará dichos espacios con valores por defecto, también se puede realizar este proceso de forma explícita, por ejemplo:
 >```sql
->-- El gestor de la base de datos completara el valor del atributo "precio"
+>-- El gestor de la base de datos completara el
+>-- valor del atributo "precio"
 >INSERT INTO producto(num_producto, nombre)
 >	VALUE (1, 'Cheese');
->-- Para mayor claridad se puede poner estos valores de forma explícita
+>-- Para mayor claridad se puede poner estos
+>-- valores de forma explícita
 >INSERT INTO producto(num_producto, nombre, precio)
 >	VALUES (1, 'Cheese', DEFAULT);
 >```
 >Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable que siempre se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado, más aun si se agregan valores nulos o por defecto. Cabe aclarar que en todas las bases de datos el valor por defecto es el `NULL`.
 
 Al igual que la inserción y la eliminación de datos, SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
-
 ```sql
--- Actualiza el saldo de las cuentas de los clientes, sumandole el interes anual
--- del 5%
+-- Actualiza el saldo de las cuentas de los clientes, 
+-- sumandole el interes anual del 5%
 UPDATE cuenta
-	SET saldo = saldo * 1.05
+	SET saldo = saldo * 1.05;
 
--- Utiliza una sentencia case para definir que aquellos clientes con un saldo
--- mayor a 10.000 pesos tiene un interes de 6% en vez del 5%
+-- Utiliza una sentencia case para definir que aquellos
+-- clientes con un saldo mayor a 10.000 pesos tiene un
+-- interes de 6% en vez del 5%
 UPDATE cuenta
 	SET saldo = CASE
 		WHEN saldo <= 10000
 			THEN saldo * 1.05
 		ELSE saldo * 1.06
-	END
+	END;
 ```
 
 >[!info] Inserciones y Actualizaciones de Vistas
@@ -92,13 +89,10 @@ UPDATE cuenta
 >- Una modificación de una vista es válida solo si la vista en cuestión se define en términos de la base de datos relacional real, es decir, la relación no es resultado de una operación de `JOIN`, o una función de agregación.
 >
 >En este contexto, las operaciones de `UPDATE`, `INSERT` y `DELETE` no se podrían realizar para la vista ***total_clientes***, dada como ejemplo anteriormente.
->Si bien esto puede lograrse a través de las las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, se tendrá que actualizar los registros de las respectivas tablas asociadas a esa vista.
-
+>Si bien esto puede lograrse a través de las ***vistas materializadas***, las cuales si poseen una tabla propia donde se almacenan los datos. El único percance es que al realizar inserciones, actualizaciones o incluso borrados a las tablas asociadas se debe refrescar la tabla de la vista materializada, lo mismo si se modifican elementos de la vista materializada, teniendo que actualizar los registros de las respectivas tablas asociadas a dicha vista.
 ## Integridad en las Bases de Datos
-
 Las restricciones de integridad garantizan que las modificaciones realizadas en la base de datos por los usuarios autorizados no den lugar a una pérdida de la consistencia de los datos. Por tanto, las restricciones de integridad protegen contra daños accidentales a las bases de datos. Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de integridad no debe depender de las aplicaciones, ya sea la base de datos o el mismo sistema de archivos.
 Las restricciones pueden aplicarse en los siguientes ámbitos:
-
 - **Restricciones de Dominio**: La declaración para que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer cualquier valor asignado a una variable cuyo tipo sea el dominio.
 
 >[!tldr] Creación de Dominios Propios
@@ -115,10 +109,10 @@ Las restricciones pueden aplicarse en los siguientes ámbitos:
 >- Es conveniente asegurarse de que todas las columnas con especificaciones de clave foránea se declaren como no nulas.
 
 - **Asertos**: Un aserto es un predicado que expresa una condición que se desea que la base de datos satisfaga siempre. Los asertos existen, ya que muchas veces existen restricciones que no se pueden expresar utilizando únicamente restricciones de dominio y las de integridad referencial. Los asertos se crean usando la cláusula `CREATE ASSERTION` y tienen una estructura particular, vamos un ejemplo:
-
 ```sql
--- La suma de todos lo importes de préstamos de cada sucursal es menor que la
--- suma de todos los saldos de las cuentas en dicha sucursal
+-- La suma de todos lo importes de préstamos de cada
+-- sucursal es menor que la suma de todos los saldos
+-- de las cuentas en dicha sucursal
 CREATE ASSERTION restriccion_suma CHECK
 	(NOT EXISTS (
 		SELECT * 
@@ -128,7 +122,7 @@ CREATE ASSERTION restriccion_suma CHECK
 				WHERE P.nom_sucursal = S.nom_sucursal)
 			 >=
 			 (SELECT sum(saldo) FROM cuenta C
-				WHERE C.nom_sucursal = S.nom_sucursal)))
+				WHERE C.nom_sucursal = S.nom_sucursal)));
 ```
 
 >[!tldr] Consideraciones para los Asertos
@@ -137,15 +131,13 @@ CREATE ASSERTION restriccion_suma CHECK
 >- La mayoría de los SGBD no contemplan el comando `CREATE ASSERTION`, en su ligar se pueden utilizar triggers para implementar aserciones.
 
 - **Trigger**: Los Triggers son procedimientos que se disparan cuando sucede un evento determinado y cuando se satisfacen determinadas condiciones. Si bien no son específicos para controlar restricciones de integridad, pueden ser muy útiles para ello, ya que se podría especificar una condición, que en caso de ser violada, informe el usuario de alguna forma. Los triggers requieren la especificación de un evento, una condición, la cual debe cumplirse y una acción a realizarse, dicha acción se ejecutará cada vez que ocurra un evento y se satisfaga la condición. Veamos un ejemplo de trigger.
-
 ```sql
--- Mantiene actualizado el sueldo total de un departamento para cada inserción
--- en la tabla de empleados
+-- Mantiene actualizado el sueldo total de un departamento
+-- para cada inserción en la tabla de empleados
 CREATE TRIGGER sueldo_total
 	AFTER INSERT ON empleado
-	FOR EACH ROW
-	WHEN(NEW.dni IS NOT NULL)
+	FOR EACH ROW WHEN(NEW.dni IS NOT NULL)
 		UPDATE departamento
-		   SET sueldo_total = sueldo_total + NEW.sueldo
-		      WHERE dni = NEW.dni
+			SET sueldo_total = sueldo_total + NEW.sueldo
+			WHERE dni = NEW.dni;
 ```
