--- a/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
+++ b/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
@@ -1,48 +1,32 @@
 SQL proporciona un lenguaje de consultas declarativo muy potente. La formulación de consultas en SQL es normalmente mucho más sencilla que la formulación de las mismas en un lenguaje de programación de propósito general. Sin embargo, es necesario el acceso a una base de datos desde un lenguaje de programación de propósito general, ya que no todas las consultas pueden expresarse en SQL, por ejemplo, las acciones no declarativas, tale como impresión de informes, interacción con usuarios, el envío de los resultados de una consulta a una interfaz gráfica, entre otras.
 Muchos sistemas de gestión de base de datos proporcionan lenguajes de procedimientos que le permite a los usuarios de las bases de datos construir bloques anónimos, procedimientos almacenados, funciones, triggers, entre otras cosas varias, aun así la función de los lenguajes de procedimientos sigue siendo limitada.
-
 ## SQL Embebido
-
 La norma SQL define la utilización de SQL dentro de varios lenguajes de programación, tales como C, Cobol, Pascal, Java, PL/I y Fortran. Esta forma incorporada de SQL amplía aún más la capacidad de los programadores de manipular las bases de datos. En SQL incorporado toda la ejecución de las consultas la realiza el sistema de bases de datos, que luego pone el resultado de
 la consulta a disposición del programa.
 Un lenguaje en el cual se introducen consultas SQL se denomina lenguaje anfitrión y las estructuras SQL que se admiten en el lenguaje anfitrión constituyen SQL embebido. Para identificar las consultas de SQL embebido, se utiliza la instrucción `EXEC SQL <instruccion SQL> END-EXEC`, aunque su sintáxis puede variar de un lenguaje a otro.
-
 >[!tldr] Preprocesado del SQL Embebido
 >Al momento de la compilación de los programas, los diferentes lenguajes con SQL embebido llaman a un preprocesador que reemplaza la consulta embebida por una serie de métodos y procedimientos que permiten conectarse a la base de datos y realizar la petición de forma apropiada.
 
 Las instrucciones de SQL incorporado son parecidas en cuanto a la forma a las instrucciones de SQL convencionales. Sin embargo, hay varias diferencias, la primera es que para formular una consulta relacional se debe declarar un cursor. El resultado de la consulta no se calcula todavía. En vez de eso, el programa debe utilizar los comandos `open` y `fetch` para obtener las tuplas resultado.
-
->[!info] Apertura e Iteración de un Cursor
->Cuando declaramos un cursor no estamos realizando una consulta a la base de datos, en cierta forma solo estamos abstrayendo una consulta, en caso de que queramos comenzar a operar sobre los datos de la base de datos debemos abrir el cursor con la instrucción `open`, esto creará un puntero que apunte al primer registro de la consulta, con `fetch` se pueden trasladar los resultados a variables del lenguaje anfitrión. Solo se traerá un único registro a la vez, en caso de querer acceder al resto de registros se tendrá que comenzar a iterar sobre el cursor.
->Una vez que haya terminado de operar sobre los datos se recomienda cerrar el cursor utilizando `close`, ya que los cursores ocupan espacio en memoria y dependiendo el tipo de consulta la cantidad de recursos ocupados puede ser significativo.
-
+Cuando declaramos un cursor no se está realizando una consulta a la base de datos, solo se está abstrayendo una consulta. En caso de que se requiera comenzar a operar sobre los datos de la base de datos se debe abrir el cursor con la instrucción `open`, esto creará un puntero al primer registro de la consulta. Se puede hacer uso de `fetch` para trasladar los resultados a variables del lenguaje anfitrión. Solo se traerá un único registro a la vez, en caso de querer acceder al resto de registros se tendrá que comenzar a iterar sobre el cursor.
+Una vez que haya terminado de operar sobre los datos se recomienda cerrar el cursor utilizando `close`, ya que los cursores ocupan espacio en memoria y dependiendo el tipo de consulta la cantidad de recursos ocupados puede ser significativo.
 El SQL embebido permite que los programas en el lenguaje anfitrión tengan acceso a la base de datos, pero no proporciona ninguna ayuda para la presentación de los resultados al usuario ni para la generación de informes.
-
 ## SQL Dinámico
-
 El SQL dinámico se refiere a la capacidad de construir consultas SQL en tiempo de ejecución, adaptándolas a diversas condiciones y necesidades específicas. ODBC y JDBC permiten realizar estas consultas dinámicas desde los programas de aplicación de una manera mucho más sencilla que la definida por el estándar SQL, aunque no sean SQL dinámico como tal, veamos un poco más sobre estas dos APIs.
-
 ### Open Data Base Connectivity (ODBC)
-
 La norma ODBC define el modo de comunicación entre los programas de aplicación y los servidores de bases de datos. Define una interfaz para programas de aplicación (API) que pueden usar las aplicaciones para:
-
 1. Abrir una conexión con una base de datos.
 2. Enviar consultas y/o actualizaciones.
 3. Obtener los resultados de las consultas.
 
 Las aplicaciones como las interfaces gráficas de usuario, los paquetes estadísticos y las hojas de cálculo pueden usar la misma API para conectarse a cualquier sistema de gestión de bases de datos compatible con ODBC. Cada sistema de gestión de base de datos que sea compatible con esta API proporciona un ***Driver***, el cual es una biblioteca que te permite interactuar con la base de datos en cuestión. Cuando el programa cliente realiza una llamada a la API ODBC, el código de la biblioteca se comunica con el servidor para realizar la acción solicitada y obtener los resultados.
 Para realizar estas consultas, primero se debe configurar la conexión, especificando todos los datos necesarios, luego se abre una conexión a esa base de datos utilizando un método brindado por la API, esta función a su vez es la encargada de controlar la conexión e identificar al usuario.
-
 ### Java Data Base Conectivity (JDBC)
-
 JDBC es una API de la librería estándar de Java que nos permite acceder a bases de datos relacionales o a cualquier tipo de datos tabulares. Consiste en un conjunto de clases e interfaces que nos proveen una API completa para la programación con bases de datos. A grandes rasgos esta API te permite:
-
 - Establecer una conexión a una fuente de datos.
 - Enviar sentencias SQL a la fuente de datos.
 - Procesar los resultados obtenidos.
 
 Debido a que utiliza Java, esta API te permite construir tu programa una sola vez, pudiendo ser ejecutado en cualquier plataforma y utilizando distintas bases de datos, siempre y cuando provean un ***Driver*** para JDBC.
-
->[!tldr] Utilización del JDBC
->La forma en la que se realiza las consultas con esta API es la misma para cualquier base de datos, lo único que cambia es el driver pasado como parámetro al método `getConnection()` del objeto `DriverManager` y el como se estructuran las consultas SQL que se pasan a los demás métodos de la API.
+La forma en la que se realiza las consultas con esta API es la misma para cualquier base de datos, lo único que cambia es el driver pasado como parámetro al método `getConnection()` del objeto `DriverManager` y el como se estructuran las consultas SQL que se pasan a los demás métodos de la API.
 
